--- a/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
+++ b/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
@@ -26,13 +26,13 @@ El objetivo final de este sistema multinivel es lograr la separación entre las 
 
 >[!tldr] Independencia de Datos
 >Las aplicaciones dependen de los **esquemas lógicos**, por eso se intenta lograr cierta independencia, de forma que podamos tener la capacidad de modificar una definición de esquema a un nivel sin que afecte la definición de esquema en el nivel inmediato superior. Dicha independencia de datos se puede dar en distintos niveles:
->- **Independencia Física de los Datos**: Es la capacidad de modificar el esquema físico sin tener que alterar el esquema conceptual ni externo.
->- **Independencia Lógica de los Datos**: Es la capacidad de modificar el esquema lógico sin alterar el esquema externo ni los programas de aplicación. Este nivel de independencia es el más díficil de lograr.
+>- **Independencia física de los datos**: Es la capacidad de modificar el esquema físico sin tener que alterar el esquema conceptual ni externo.
+>- **Independencia lógica de los datos**: Es la capacidad de modificar el esquema lógico sin alterar el esquema externo ni los programas de aplicación. Este nivel de independencia es el más díficil de lograr.
 ### Modelos de Datos
 En el área de las bases de datos existe una colección de herramientas conceptuales que se utilizan para describir los datos, las relaciones, la semántica y las restricciones de integridad. Los diferentes modelos de datos existentes, pueden ser agrupados en distintas categorías:
 - **Modelos de datos de alto nivel o conceptuales**: Estos modelos están diseñados para ser abstractos y generales, enfocados en cómo la mayoría de los usuarios entienden los datos. Usan conceptos como entidades, atributos y relaciones que reflejan la realidad del dominio del problema de forma intuitiva.
 - **Modelos de datos de bajo nivel o físico**: Estos modelos proporcionan una visión detallada de cómo los datos se organizan físicamente en el sistema de almacenamiento. Incluyen detalles como estructuras de almacenamiento específicas, índices, caminos de acceso a los datos y optimización del rendimiento. Son esenciales para los administradores de bases de datos y los diseñadores de sistemas, ya que afectan directamente el rendimiento y la eficiencia del almacenamiento de datos.
-- **Modelos de datos de representación o implementación**: También conocidos como modelos semánticos. Abarcan conceptos que son comprensibles para los usuarios finales, pero que también ofrecen una representación más cercana a cómo los datos se organizan en la base de datos.
+- **Modelos de datos de representación o implementación**: También conocidos como modelos semánticos. Abarcan conceptos que son comprensibles para los usuarios finales, pero que también ofrecen una representación más cercana a cómo los datos se organizan en un SGBD específico.
 
 >[!note] Esquemas e Instancias de una Base de Datos
 >- El diseño completo de la base de datos se llama ***esquema*** de la base de datos.
@@ -42,7 +42,7 @@ En el área de las bases de datos existe una colección de herramientas conceptu
 ## Lenguaje de Bases de Datos
 Los sistemas de bases de datos proporcionan un *lenguaje de definición de datos* para especificar el esquema de la base de datos y un *lenguaje de manipulación de datos* para expresar las consultas y las modificaciones de la base de datos. En la práctica, ambos lenguajes forman parte de un único lenguaje de bases de datos, como lo puede ser SQL u otros lenguajes empleados por las bases de datos.
 ### Lenguaje de Manipulación de Datos
-Los ***lenguajes de manipulación de datos (LMD)*** permiten a los usuarios tener acceso a los datos organizados mediante el modelo de datos correspondiente o manipularlos. Los tipos de acceso son:
+Los ***lenguajes de manipulación de datos (LMD)*** permiten a los usuarios tener acceso a los datos organizados mediante el modelo de datos correspondiente, pudiendo a su vez manipular esos datos. Los tipos de acceso son:
 - Recuperación de la información.
 - Inserción de nuevos datos a la base de datos.
 - Borrado de datos.
@@ -53,7 +53,7 @@ Los ***lenguajes de manipulación de datos (LMD)*** permiten a los usuarios tene
 
 Una ***consulta*** es una instrucción que solicita la recuperación de información. La parte de los LMDs implicada en la recuperación de información se denomina *lenguaje de consultas*. Aunque técnicamente sea incorrecto, resulta habitual usar las expresiones lenguaje de consultas y lenguaje de manipulación de datos como sinónimas.
 ### Lenguaje de Definición de Datos
-Los ***lenguajes de definición de datos (LDD)*** permiten a los usuarios definir el esquema de la base de datos, además de permitir especificar más propiedades para los datos manipulados por el sistema.
+Los ***lenguajes de definición de datos (LDD)*** permiten a los usuarios definir el esquema de la base de datos, además de permitir especificar más propiedades para los datos mantenidos por el sistema.
 La estructura de almacenamiento y los métodos de acceso usados por el sistema de bases de datos se especifican mediante un conjunto de instrucciones en un tipo especial de LDD denominado *lenguaje de almacenamiento y definición de datos*. Estas instrucciones definen los detalles de implementación de los esquemas de las bases de datos, que suelen ocultarse a los usuarios.
 Los valores de los datos almacenados en la base de datos deben satisfacer ciertas ***restricciones de consistencia***, los LDDs proporcionan facilidades para especificar estas restricciones. Ahora bien, debido a que el rendimiento es un aspecto fundamental para las bases de datos, los sistemas solo se concentran en brindar aquellas restricciones de integridad que pueden comprobarse con una sobrecarga mínima, las cueles son:
 - **Restricciones de dominio**.
