--- a/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
@@ -5,7 +5,7 @@ Los esquemas basados en bloqueos consisten en permitir que una transacción acce
 - **Compartido (S)**: Si una transacción $T_i$ ha obtenido un bloqueo de un dato $Q$ en modo compartido, entonces $T_i$ puede leer el dato $Q$ pero no escribir $Q$. Este modo permite que otras transacciones puedan acceder y leer el dato sin problema alguno.
 - **Exclusivo (X)**: Si la transacción $T_i$ obtuvo un bloqueo de un dato $Q$ en modo exclusivo, entonces solo $T_i$ puede leer y escribir $Q$. Este modo es el más restrictivo y permite que solo la transacción que bloqueo el dato pueda leer y modificar este mismo.
 
-Cuando una transacción desbloquea datos inmediatamente después de su último acceso, puede comprometer la serializabilidad de la transacción. Para evitar esto, se puede mantener el bloqueo en los datos hasta el final de la transacción, es decir, liberar los datos una vez que la transacción se haya comprometido. Aunque esta estrategia preserva la serializabilidad de la transacción, puede dar lugar a **interbloqueos**.
+Cuando una transacción desbloquea datos inmediatamente después de su último acceso, puede comprometer la serializabilidad de la transacción. Para evitar esto, se puede mantener el bloqueo en los datos hasta el final de la transacción, es decir, liberar los datos una vez que la transacción se haya comprometido. Aunque esta estrategia preserva la serializabilidad de la transacción, puede dar lugar a ***interbloqueos***.
 
 >[!tldr] Inanición
 >Supongamos que una transacción $T_i$ tiene bloqueado un dato $Q$ en modo compartido, si una transacción $T_j$ quiere bloquear el dato de forma exclusiva va a tener que esperar hasta que $T_i$ libere dicho dato. El problema surge cuando otras transacciones también bloqueen de forma compartida a $Q$, produciendo una espera indefinida de la transacción $T_j$.
@@ -31,7 +31,7 @@ El modelo más simple exige que se tenga un conocimiento sobre el orden al que s
 2. Los datos pueden desbloquearse en cualquier momento.
 3. Si $T_i$ desbloqueo un dato, entonces $T_i$ no puede volver a bloquearlo nuevamente.
 
-Este protocolo asegura la secuencialidad y evita interbloqueos, pero no garantiza la recuperabilidad ni tampoco la ausencia de retrocesos en cascadas. Para asegurar estos dos últimos factores se pueden mantener los bloqueos hasta el final de la transacción.
+Este protocolo asegura la serializabilidad y evita interbloqueos, pero no garantiza la recuperabilidad ni tampoco la ausencia de retrocesos en cascadas. Para asegurar estos dos últimos factores se pueden mantener los bloqueos hasta el final de la transacción.
 Aunque el protocolo de árbol evita interbloqueos, puede requerir bloqueos adicionales, reduciendo la concurrencia. Existen planificaciones posibles con el protocolo de dos fases que no son posibles con el de árbol, y viceversa.
 ## Esquemas Basados en Hora de Entrada
 Estos protocolos garantizan la serializabilidad seleccionando por adelantado un orden entre las transacciones. El método más conocido empleado por este tipo de protocolos es el de **estampillas de tiempo (timestamp ordering)**, en el cual:
@@ -53,7 +53,7 @@ Al igual que los protocolos de bloqueo en dos fases, las lecturas no comprometid
 - Si $T_i$ solicita una lectura sobre un dato $Q$, entonces se debe cumplir que $ts(T_i) \geq w-ts(Q)$, en caso de que esta condición se cumpla se ejecuta la operación de lectura y se actualiza la estampilla de tiempo de lectura sobre $Q$ de la siguiente manera $r-ts(Q) = max[r-ts(Q), ts(T_i)]$. Si esta condición no se cumple esto implica que $T_i$ está intentando leer un valor que fue sobreescrito por una transacción más joven, por lo tanto, la transacción retrocede.
 - Si $T_i$ solicita una escritura sobre un dato $Q$, entonces se debe cumplir que $ts(T_i) \geq r-ts(Q) \wedge ts(T_i) \geq w-ts(Q)$ en caso de que ambas condiciones se cumplan se ejecuta la operación de escritura y se actualiza la estampilla de tiempo de escritura sobre $Q$ de la siguiente manera $w-ts(Q) = ts(T_i)$. Si una de las dos condiciones no se cumple $T_i$ retrocederá, puesto que o llego tarde a realizar la escritura de dicho valor o dicho valor a escribir es obsoleto porque una transacción más joven sobreescribió ese valor con anterioridad.
 
-Las ***reglas de escritura de Thomas*** son una pequeña modificación al procedimiento de escritura la cual ayuda a mejorar la concurrencia durante el control de concurrencia, manejando los conflictos de escritura entre transacciones de manera más eficiente. De forma resumida la regla de Thomas modifica levemente las acciones que se realizan al momento de escribir un dato. Esta regla dicen lo siguiente:
+Las ***reglas de escritura de Thomas*** son una pequeña modificación al procedimiento de escritura la cual ayuda a mejorar el grado de concurrencia, manejando los conflictos de escritura entre transacciones de manera más eficiente. De forma resumida la regla de Thomas modifica levemente las acciones que se realizan al momento de escribir un dato. Esta regla dicen lo siguiente:
 - Si $T_i$ solicita una escritura sobre un dato $Q$, entonces se debe cumplir que $ts(T_i) \geq r-ts(Q) \wedge ts(T_i) \geq w-ts(Q)$ en caso de que ambas condiciones se cumplan se ejecuta la operación de escritura y se actualiza la estampilla de tiempo de escritura sobre $Q$ de la siguiente manera $w-ts(Q) = ts(T_i)$. Si la segunda condición no es cumplida por $T_i$, el planificador simplemente ignora la operación de escritura y continua normalmente con su ejecución, esto evita el retroceso innecesario de la transacción. $T_i$ solo retrocederá si no puede cumplir con la primera condición establecida en el protocolo.
 ### Protocolos Basados en Validación (Optimistas)
 En ocasiones particulares, como aquellas donde se realizan muchas más transacciones de lectura que de escritura, resulta conveniente utilizar un método de evaluación optimista, debido a que la tasa de conflictos entre las transacciones es baja. Así, muchas de esas transacciones, si se ejecutasen sin la supervisión de un esquema de control de concurrencia, llevarían no obstante al sistema a un estado consistente. Aplicando métodos alternativos de validación podemos disminuir la sobrecarga del sistema sin perder consistencia en la base de datos.
@@ -82,11 +82,11 @@ La técnica más utilizada para los esquemas multiversión es la de estampillas 
 - $r-ts(Qk)$: estampilla de tiempo de la transacción más joven que leyó con éxito la versión $Q_k$.
 
 Una transacción $T_i$ crea una versión $Q_k$ del dato $Q$, cuando ejecuta la operación de escritura sobre $Q$. El campo contenido tendrá el valor que escribió $T_i$ y $w-ts(Q_k) = r-ts(Q_k) = ts(T_i)$. El valor $r-ts(Q_k)$ puede modificarse cuando una transacción $T_j$ lee $Q_k$ y $r-ts(Q_k) < ts(T_j)$.
-Si una operación $T_i$ solicita una operación de lectura o escritura sobre $Q$, y $Q_k$ es una versión de $Q$ cuya estampilla de tiempo de escritura es el $ts$ más grande, menor que $ts(T_i)$, entonces se lleva a cabo una de las siguientes operaciones:
-1. Si $T_i$ quiere realizar una lectura sobre $Q$, entonces el valor devuelto es el contenido de la versión $Q_k$.
-2. Si $T_i$ quiere realizar una operación de escritura sobre $Q$, y $ts(T_i) < r-ts(Q_k)$, entonces la transacción $T_i$ retrocede; en caso contrario se crea una nueva versión $Q_i$.
+Si una transacción $T_j$ solicita una operación de lectura o escritura sobre $Q$, y $Q_k$ es una versión de $Q$ cuya estampilla de tiempo de escritura es el $ts$ más grande, menor que $ts(T_j)$, entonces se lleva a cabo una de las siguientes operaciones:
+1. Si $T_j$ quiere realizar una lectura sobre $Q$, entonces el valor devuelto es el contenido de la versión $Q_k$.
+2. Si $T_j$ quiere realizar una operación de escritura sobre $Q$, y $ts(T_j) < r-ts(Q_k)$, entonces la transacción $T_i$ retrocede; en caso contrario se crea una nueva versión $Q_i$.
 
-La justificación de la primera operación es clara, una transacción lee la versión más reciente que viene antes de ella en el tiempo. La segunda regla fuerza a que se aborte una transacción que realice una escritura tardía de $Q$. Siendo más precisos, si $T_i$ intenta escribir una versión que alguna otra transacción haya leído, entonces no se puede permitir que dicha escritura tenga éxito.
+La justificación de la primera operación es clara, una transacción lee la versión más reciente que viene antes de ella en el tiempo. La segunda regla fuerza a que se aborte una transacción que realice una escritura tardía de $Q$. Siendo más precisos, si $T_j$ intenta escribir una versión que alguna otra transacción haya leído, entonces no se puede permitir que dicha escritura tenga éxito.
 Las versiones que ya no se necesitan se borran basándose en la regla siguiente. Supóngase que hay dos versiones, $Q_k$ y $Q_j$, de un elemento de datos y que ambas tienen $w-ts$ menor que la marca temporal de la transacción más antigua en el sistema, lo que significa que ni una de esas versiones será utilizada por ninguna de las transacciones activas en el sistema, por ende, estas pueden ser borradas.
 
 >[!tldr] Ventajas y Desventajas de los Esquemas Miltiversión
