--- a/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
+++ b/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
@@ -10,8 +10,7 @@ El compromiso en tres fases asegura que todos los nodos se comprometan o retroce
 2. Se desconectan de la red dos o más nodos que estaban involucrados en la transacción global.
 3. Se produce un error de software no manejado.
 
-En la mayoría de los casos, la base de datos resuelve automáticamente la transacción que está en duda a través de un ***proceso de recuperación***. Aunque el proceso de resolución de dicho problema depende de la fase en la que se encuentre la transacción distribuida.
-Si el error ocurre durante la fase de preparación, sucede la siguiente secuencia de eventos:
+En la mayoría de los casos, la base de datos resuelve automáticamente la transacción que está en duda a través de un ***proceso de recuperación***. Aunque el proceso de resolución de dicho problema depende de la fase en la que se encuentre la transacción distribuida. Si el error ocurre durante la fase de preparación, sucede la siguiente secuencia de eventos:
 1. Un usuario se conecta a un cliente y ejecuta una transacción de forma distribuida.
 2. El coordinador global de la transacción pide a todas las bases de datos involucradas que se comprometan o que retrocedan de acuerdo a las órdenes que esté mismo dé.
 3. Una de las bases de datos se bloquea antes de emitir su respuesta al coordinador.
