--- a/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
@@ -42,7 +42,7 @@ El ***modelo dimensional*** es un esquema de datos, que contiene la misma inform
 	- **Hechos no aditivos**: Son medidas de intensidad no aditivas en todas las dimensiones, son el resultado de las funciones de agregación como `AVG`.
 - **Dimensiones**: Brindan mayor contexto o perspectiva a los diferentes hechos asociados a las mismas.
 
-El principal propósito de las tablas de dimensiones es proveer mayor contexto o brindar cierta perspectiva sobre los hechos que se están analizando, por ejemplo, si se está analizando las ventas, las mismas se pueden ser categorizar por cliente, producto e incluso tiempo. Como se puede observar estas tres dimensiones mencionadas en el ejemplo nos brindan un mayor contexto a la hora de interpretar los datos.
+El principal propósito de las tablas de dimensiones es proveer mayor contexto o brindar cierta perspectiva sobre los hechos que se están analizando, por ejemplo, si se está analizando las ventas, las mismas pueden ser categorizar por cliente, producto e incluso tiempo. Como se puede observar estas tres dimensiones mencionadas en el ejemplo nos brindan un mayor contexto a la hora de interpretar los datos.
 Generalmente, las tablas dimensionales están compuestas por atributos y es bastante común que posean una sola clave primaria. Mientras que las tablas de hechos suelen caracterizarse por tener muchas claves foráneas y en ciertos casos atributos propios.
 ### Esquemas para el Modelo Dimensional
 Existen dos modelos dimensionales principales:
