--- a/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
+++ b/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
@@ -1,9 +1,9 @@
-El desarrollo de un modelo teórico para el modelado de bases de datos es necesario, puesto que proporciona una representación abstracta que permite visualizar y analizar la estructura antes de su implementación. Esto facilita la detección temprana de errores, reduce costos de desarrollo y asegura que la base de datos cumpla con los requisitos del negocio. Además, sirve como documentación vital para el equipo de desarrollo y futuros mantenimientos, facilitando al mismo tiempo la comunicación entre los desarrolladores y los usuarios finales del sistema.
-El modelo Entidad-Relación (E-R) se basa en la representación del mundo real a través de un conjunto de objetos básicos llamados entidades y de relaciones entre esas entidades. Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
+El desarrollo de un modelo teórico para el modelado de bases de datos es necesario, puesto que proporciona una representación abstracta que permite visualizar y analizar la estructura antes de su implementación. Esto facilita la detección temprana de errores, reduce costos de desarrollo y asegura que la base de datos cumpla con los requerimientos del negocio. Además, sirve como documentación para el equipo de desarrollo y mantenimiento, facilitando al mismo tiempo la comunicación entre los desarrolladores y los usuarios finales del sistema.
+El ***Modelo Entidad-Relación (E-R)*** se basa en la representación del mundo real a través de un conjunto de objetos básicos llamados entidades y de relaciones entre esas entidades. Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
 Las entidades se representan mediante un conjunto de *atributos*, estos atributos describen propiedades que posee cada miembro de un conjunto de entidades y pueden ser de distintos tipos:
-- Simples y Compuestos
-- Monovalorados y Multivalorados
-- Derivados
+- Simples y Compuestos.
+- Monovalorados y Multivalorados.
+- Derivados.
 
 >[!note] Atributos Derivados
 >Los atributos derivados son aquellos que pueden ser calculados a partir de otro atributo de la entidad, como por ejemplo la edad. Este tipo de atributos no suele ser almacenado en la base de datos.
@@ -23,7 +23,5 @@ Aunque puedan existir varias claves candidatas, solo una de estas se establece c
 >La estructura de la clave primaria para el conjunto de relaciones depende de la correspondencia de cardinalidades asociada al conjunto de relaciones.
 >- Si la relación es de varios a varios, la clave primaria del conjunto de relaciones estará compuesta por en par de 2 o $n$ elementos, cuyos componentes serán las claves primarias de los conjuntos de entidades que participan en la relación.
 ### Conjunto de Entidades Débiles
-Un ***conjunto de entidades débiles*** (CED) es un conjunto de entidades que no tiene suficientes atributos para formar una superclave, por tanto, estos mismos deben asociarse con otro conjunto de entidades denominado ***conjunto de entidades identificadoras o propietarias*** (CEI). La relación que asocia el CED con el CEI se denomina ***relación identificadora***.
-- La relación identificadora es de varios a uno desde el CED al CEI y la participación del CED es total, es decir, tiene cardinalidad $1..^*$.
-
+Un ***conjunto de entidades débiles (CED)*** es un conjunto de entidades que no tiene suficientes atributos para formar una superclave, por tanto, estos mismos deben asociarse con otro conjunto de entidades denominado ***conjunto de entidades identificadoras o propietarias (CEI)***. La relación que asocia el CED con el CEI se denomina ***relación identificadora***. La relación identificadora tiene la particularidad de que siempre es una relación del tipo varios a uno desde el CED al CEI, además que la participación del CED es total, es decir, tiene cardinalidad $1..^*$.
 El ***discriminante*** de un CED, es un conjunto de atributos que permite distinguir todas aquellas entidades del conjunto de entidades que dependen de una entidad fuerte particular. Mientras que la clave primaria de un CED se forma con la clave primaria del CEI, más el discriminante del CED.
