--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -1,12 +1,12 @@
-La fase inicial del diseño de bases de datos consiste en caracterizar completamente las necesidades de datos esperadas por los usuarios de la base de datos. El resultado de esta fase es una especificación de requisitos del usuario, los cuales quedaron documentados mediante el diagrama de datos que hayamos elegido, obteniendo así un ***diseño conceptual*** de la base de datos.
+La fase inicial en el diseño de una base de datos consiste en especificar completamente las necesidades de datos esperadas por los usuarios de la base de datos. El resultado de esta fase es una especificación de requisitos del usuario, los cuales quedaron documentados mediante el diagrama de datos que hayamos elegido, obteniendo así un ***diseño conceptual*** de la base de datos.
 En la ***fase de diseño lógico*** se desarrolla un modelo abstracto de la información requerida por el negocio, basado en los requisitos recolectados durante la fase de análisis de requisitos. Este diseño no considera las limitaciones de ningún sistema de gestión de bases de datos específico.
 Durante la ***fase de diseño físico***, el modelo lógico se traduce en un modelo que puede ser implementado físicamente en un sistema de gestión de bases de datos específico. Esto incluyen la forma en la que se organizan los datos físicamente, las estructuras de almacenamiento interno, los métodos de acceso, entre otros.
 ## Mapeo del Esquema Entidad-Relación Extendido a Tablas
 Una base de datos conformada por un diagrama Entidad-Relación se puede representar como una colección de tablas. Por cada conjunto entidad y conjunto relación, existe una única tabla a la que se le asigna el nombre de conjunto entidad o relación, cada tabla tiene $n$ cantidad de columnas con nombres únicos, generalmente correspondiente a los atributos.
 La conversión de un diagrama Entidad-Relación a formato de tablas, es la base para la derivación de un diseño de una base de datos relacional. La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de entidad o relación, la cardinalidad que estos poseen y su participación en una relación.
 >[!tldr] Redundancia de Tablas
->Existen casos en que puede haber redundancia de tablas, uno de estos casos es la relación de identificación, la cual tiene siempre las siguientes características:
->1. Es una relación de uno a varios.
+>Existen casos en que puede haber redundancia de tablas, uno de estos casos es la relación de identificación entre CED y CEI, la cual tiene siempre las siguientes características:
+>1. Es una relación de varios a uno.
 >2. $\{K_P \in CEF\} \subset \{K_P \in CED\}$
 >3. La relación de identificación no tiene atributos.
 >
@@ -16,14 +16,14 @@ La conversión de un diagrama Entidad-Relación a formato de tablas, es la base 
 >$$
 >Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para dicha relación. Esto es así, ya que el conjunto de entidades débiles tiene en su tabla un atributo que hace referencia a la clave primaria de el conjunto de entidades propietarias. 
 
-- Un ***conjunto de entidades débiles*** se representa como una tabla con una columna por cada atributo de la entidad, y además, contendrá una columna extra para la *clave primaria* de la entidad fuerte que lo identifica.
+- Un *conjunto de entidades débiles* se representa como una tabla con una columna por cada atributo de la entidad, y además, contendrá una columna extra para la *clave primaria* de la entidad identificadora con la que está asociada.
 - Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo que forme parte de su relación, tal que $R \{a_1, \dots , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de los conjuntos de entidades $A$, $B$ y $C$ respectivamente.
 - Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de los conjuntos de entidades participantes de dicha relación y los atributos propios de la relación si es que esta posee alguno.
 - Para las relaciones de varios a uno y de uno a varios con pertenencia total, se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, agregando para cada entidad un atributo extra que representaría la clave primaria de la entidad con la que se está relacionando.
 
 ![[varios-uno.png]]
 
-- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos los atributos correspondientes de cada conjunto de entidades. Una de esas tablas tendrá un atributo más que será la clave primaria del otro conjunto de entidades con el que se está relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de las reglas de normalización que apliquemos.
+- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a uno normales, se crearán dos tablas que contendrán todos los atributos correspondientes de cada conjunto de entidades. Una de esas tablas tendrá un atributo más que será la clave primaria del otro conjunto de entidades con el que se está relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de las reglas de normalización que apliquemos.
 
 ![[uno-uno-total.png]]
 
