--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -1,5 +1,5 @@
-El **modelo relacional** fue introducido en 1970 por el matemático Edgar D. Codd, y debido a su simplicidad, la posibilidad de poder realizar consultas de manera declarativa y su fundamento matemático tuvo una amplia difusión.
-En este modelo se representa a las bases de datos como una colección de archivos en forma tabular que se denominan ***relaciones***, las cuales poseen dos elementos, las tuplas (filas) y sus atributos (columnas). Cada atributo de una relación posee un nombre y un ***dominio***, es decir, un conjunto de valores válidos permitidos.
+El ***modelo relacional*** fue introducido en 1970 por el matemático Edgar D. Codd, y debido a su simplicidad, la posibilidad de poder realizar consultas de manera declarativa y su fundamento matemático tuvo una amplia difusión.
+En este modelo se representa a las bases de datos como una colección de archivos en forma tabular denominados ***relaciones***, las cuales poseen dos elementos, las tuplas (filas) y sus atributos (columnas). Cada atributo de una relación posee un nombre y un ***dominio***, es decir, un conjunto de valores válidos permitidos.
 Los valores para los atributos deben ser atómicos, es decir, no admite atributos compuestos o multivaluados. Además, los atributos poseen un valor especial, *el nulo*, el cual es miembro de todos los dominios existentes. Formalmente, sean $A_1, A_2, \dots, A_n$ atributos, $R = (A_1, A_2, \dots, A_n)$ es el esquema de la relación y $r(R)$ es una relación en el esquema $R$, es decir, una instancia del esquema $R$.
 En este contexto la información se divide en partes, donde cada una de esas partes almacena parte de la información, esto se hace porque de esta forma evitamos la repetición de la información y el uso excesivo de los valores nulos, los cuales suelen causar muchos problemas.
 ## Lenguajes de Consultas
@@ -25,7 +25,7 @@ $$
 $$
 r\times s = \{tq|t \in r \land q \in s\}
 $$
-- **Renombramiento**. Formalmente denotada como $\rho_x(E)$, donde $E$ es una expresión del álgebra relacional y $x$ el nuevo nombre que hace referencia a esa relación. Nos permite *nombrar* resultados de operaciones en álgebra relacional, por lo tanto, nos permite referenciar una relación a través de múltiples nombres.
+- **Renombramiento**. Formalmente denotada como $\rho_x(E)$, donde $E$ es una expresión del álgebra relacional y $x$ el nuevo nombre que hace referencia a esa relación. Nos permite *nombrar* resultados de operaciones en álgebra relacional, por lo tanto, referenciar una relación a través de múltiples nombres.
 
 >[!tldr] Renombramiento de Atributos en una Relación
 >También está permitido el renombramiento de atributos de una relación producida por una expresión, supongamos que tenemos una expresión $E$ del álgebra relacional con una aridad $n$, en ese caso:
@@ -71,12 +71,12 @@ El cálculo relacional de tuplas, es un lenguaje de consulta declarativo, en el 
 $$
 \{t | P(t)\}
 $$
-Cuya interpretación sería: todos los conjuntos de tuplas para el cuales el predicado $P$ es cierto para $t$. Además, se utiliza $t[A]$ para denotar el valor de la tupla $t$ en el atributo $A$ y $t \in r$ para denotar que la tupla $t$ pertenece a la relación $r$, donde $P$ es una fórmula similar a la del cálculo de predicados que consta de las siguientes componentes:
-- **Conjuntos de *atributos* y *constantes***.
-- **Conjunto de operaciones de comparación** ($<, >, \leq, \geq, =, \neq$).
-- **Conjunto de conectores** ($\lor, \land, \neg$).
-- **Implicaciones** ($\Rightarrow$).
-- **Conjunto de cuantificadores**:
+Cuya interpretación sería *todos los conjuntos de tuplas para el cuales el predicado $P$ es cierto para $t$*. Además, se utiliza $t[A]$ para denotar el valor de la tupla $t$ en el atributo $A$ y $t \in r$ para denotar que la tupla $t$ pertenece a la relación $r$, donde $P$ es una fórmula similar a la del cálculo de predicados que consta de las siguientes componentes:
+- Conjuntos de atributos y constantes.
+- Conjunto de operaciones de comparación ($<, >, \leq, \geq, =, \neq$).
+- Conjunto de conectores ($\lor, \land, \neg$).
+- Implicaciones ($\Rightarrow$).
+- Conjunto de cuantificadores:
 	- $\exists \ t \in r(Q(t))$: Existe una tupla $t$ en la relación $r$ tal que el predicado $Q(t)$ es verdadero.
 	- $\forall \ t \in r(Q(t))$: $Q$ es verdadero para toda tupla $t$ en la relación $r$.
 
@@ -89,7 +89,7 @@ $$
 \{\ t \ | \ \exists s \in prestamo (t[numero\_prestamo] = s[numero\_prestamo] \land s[importe] > 1200)\}
 $$
 La variable tupla $t$ solo se define en términos del atributo *numero_prestamo*, dado que es el único atributo para el que se especifica una condición para $t$. Por tanto, el resultado es una relación de **(*numero_prestamo*)**.
-Supongamos que queremos realizar la operación de división, pero en el cálculo relacional de tuplas, queremos listar a todos los clientes que tengan una cuenta en todas las sucursales de "*Arganzuela*", eso se logra de la siguiente manera:
+Supongamos que queremos realizar la operación de división, pero en el cálculo relacional de tuplas, queremos listar a todos los clientes que tengan una cuenta en todas las sucursales de “*Arganzuela*”, eso se logra de la siguiente manera:
 $$
 \begin{align*}
 \{ \ t \ | \ \exists r \in cliente (r[nombre\_cliente] = t[nombre\_cliente]) \ \land \\ 
@@ -113,7 +113,7 @@ En este caso del lado izquierdo expresamos todos los atributos de retorno, y del
 $$
 \{<p>| \ \exists s,i (<p,s,i> \in prestamo \land i > 1200)\}
 $$
-Aunque la segunda consulta tenga un aspecto muy parecido a la presentada para el cálculo relacional de tuplas, hay una diferencia importante. En el cálculo de tuplas, cuando se escribe $\exists s$ para alguna variable tupla $s$, se vincula inmediatamente con una relación escribiendo $\exists s \in r$. Sin embargo, cuando se usa $\exists s$ en el cálculo de dominios, $b$ no se refiere a una tupla, sino a un valor de dominio. Por tanto, el dominio de la variable $s$ no está restringido hasta que la subfórmula $< p, s, i > \in prestamo$, esto restringe $s$ a los nombres de sucursal que aparecen en la relación préstamo.
+Aunque la segunda consulta tenga un aspecto muy parecido a la presentada para el cálculo relacional de tuplas, hay una diferencia importante. En el cálculo de tuplas, cuando se escribe $\exists s$ para alguna variable tupla $s$, se vincula inmediatamente con una relación escribiendo $\exists s \in r$. Sin embargo, cuando se usa $\exists s$ en el cálculo de dominios, $b$ no se refiere a una tupla, sino a un valor de dominio. Por tanto, el dominio de la variable $s$ no está restringido hasta que se especifíaca la subfórmula $< p, s, i > \in prestamo$, esto restringe $s$ a los nombres de sucursal que aparecen en la relación préstamo.
 En caso de que queramos traer los nombres de todas las personas que tienen una cuenta en todas las sucursales de “*Arganzuela*”, lo haríamos de la siguiente manera:
 $$
 \begin{align*}
