--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
@@ -37,8 +37,8 @@ Idealmente por cuestiones de practicidad y ahorros de tiempo, el control de inte
 >El estándar SQL permite que el usuario definan sus propios dominios y asignar estos mismos a distintos atributos en las diferentes tablas que componen la base de datos, con la particularidad de que también se pueden especificar más restricciones para estos dominios.
 >SQL permite realizar casteos desde un dominio a otro, siempre y cuando se respeten las reglas bajo las que fue definido dicho dominio. Además, estos dominios pueden ser borrados o alterados al igual que las tablas.
 
-- **Restricciones de claves**: Existen atributos de las entidades que identifican a unívocamente a cada uno de los datos de una tabla. Los sistemas de gestión de base de datos permite a estos atributos como **claves primarias**, esto asegura que dicho valor no sea nulo.
-- **Restricciones de integridad referencial**: Consiste en asegurar que un valor que aparece en una relación para un conjunto de atributos determinado aparezca también en otra relación, es decir, esa relación posee una **clave foránea** que hace referencia a un elemento de otra relación.  Estas claves pueden especificarse cuando se están creando los esquemas, a través de la cláusula `FOREIGN KEY`. Esta cláusula permite especificar que hacer si una acción de borrado o de actualización en la relación a la que se hace referencia viola la restricción.
+- **Restricciones de claves**: Existen atributos de las entidades que identifican a unívocamente a cada uno de los datos de una tabla. Los sistemas de gestión de base de datos permite a estos atributos como *claves primarias*, esto asegura que dicho valor no sea nulo.
+- **Restricciones de integridad referencial**: Consiste en asegurar que un valor que aparece en una relación para un conjunto de atributos determinado aparezca también en otra relación, es decir, esa relación posee una *clave foránea* que hace referencia a un elemento de otra relación.  Estas claves pueden especificarse cuando se están creando los esquemas, a través de la cláusula `FOREIGN KEY`. Esta cláusula permite especificar que hacer si una acción de borrado o de actualización en la relación a la que se hace referencia viola la restricción.
 >[!tldr] Consideraciones para la Integridad Referencial
 >- Si hay una cadena de dependencias de claves externas entre varias relaciones, un borrado o una actualización en uno de sus extremos puede propagarse por toda la cadena.
 >- Una restricción de clave foránea de una relación puede hacer referencia a esa misma relación.
