--- a/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
+++ b/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
@@ -18,7 +18,7 @@ La norma ODBC define el modo de comunicación entre los programas de aplicación
 2. Enviar consultas y/o actualizaciones.
 3. Obtener los resultados de las consultas.
 
-Las aplicaciones como las interfaces gráficas de usuario, los paquetes estadísticos y las hojas de cálculo pueden usar la misma API para conectarse a cualquier sistema de gestión de bases de datos compatible con ODBC. Cada sistema de gestión de base de datos que sea compatible con esta API proporciona un ***Driver***, el cual es una biblioteca que te permite interactuar con la base de datos en cuestión. Cuando el programa cliente realiza una llamada a la API ODBC, el código de la biblioteca se comunica con el servidor para realizar la acción solicitada y obtener los resultados.
+Las aplicaciones como las interfaces gráficas, los paquetes estadísticos y las hojas de cálculo pueden usar la misma API para conectarse a cualquier sistema de gestión de bases de datos compatible con ODBC. Cada sistema de gestión de base de datos que sea compatible con esta API proporciona un ***Driver***, el cual es una biblioteca que te permite interactuar con la base de datos en cuestión. Cuando el programa cliente realiza una llamada a la API ODBC, el código de la biblioteca se comunica con el servidor para realizar la acción solicitada y obtener los resultados.
 Para realizar estas consultas, primero se debe configurar la conexión, especificando todos los datos necesarios, luego se abre una conexión a esa base de datos utilizando un método brindado por la API, esta función a su vez es la encargada de controlar la conexión e identificar al usuario.
 ### Java Data Base Conectivity (JDBC)
 JDBC es una API de la librería estándar de Java que nos permite acceder a bases de datos relacionales o a cualquier tipo de datos tabulares. Consiste en un conjunto de clases e interfaces que nos proveen una API completa para la programación con bases de datos. A grandes rasgos, esta API te permite:
