--- a/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
@@ -1,4 +1,4 @@
-El diseño de las bases de datos relacionales requiere que encontremos una “buena” colección de esquemas de relación. Un mal diseño podría introducir repeticiones de información, potenciales inconsistencias, anomalías en la modificación, anomalías en la inserción y eliminación e incluso una imposibilidad de representar determinada información.
+El diseño de las bases de datos relacionales requiere que encontremos una “buena” colección de esquemas de relación. Un mal diseño podría introducir repeticiones de información, potenciales inconsistencias, anomalías en la modificación, inserción y eliminación de datos e incluso una imposibilidad de representar determinada información.
 El objetivo principal del diseño relacional, es generar un conjunto de esquemas relacionales que permita:
 1. Almacenar la información sin redundancias innecesarias.
 2. Asegurar que estén representadas las relaciones entre los atributos.
@@ -68,12 +68,12 @@ La clausura un conjunto de atributos se utilizan para:
 - **Calcular** $F^+$: Para cada $X \subseteq R$, encontrar su clausura $X^+$, y para cada $Y \subseteq X^+$, obtenemos una dependencia funcional $X \rightarrow Y$.
 ### Coberturas Canónicas
 Puede que un conjunto de dependencias funcionales contenga dependencias redundantes que se pueden inferir a partir de otras dependencias o incluso que ciertas dependencias funcionales tengan partes redundantes. Una ***cobertura canónica*** de $F$ es un conjunto minimal de dependencias funcionales equivalente a $F$, que no tiene dependencias redundantes o partes de una dependencia redundante.
-Dos conjuntos de dependencias son equivalentes si $F_1^+ = F_2^+ \Rightarrow F_1 \equiv F_2$. Pero como no es conveniente calcular las clausuras para cada $F_i$, se puede chequear las equivalencias de la siguiente manera $F_1 \vdash F_2 \land F_2 \vdash F_1 \Rightarrow F_1 \equiv F_2$, es decir, todas las dependencias funcionales de $F_2$ pueden ser inferidas a partir de $F_1$ y viceversa, si esto es posible para ambos conjuntos entonces $F_1$ es una cobertura canónica de $F_2$.
+Dos conjuntos de dependencias son equivalentes si $F_1^+ = F_2^+ \Rightarrow F_1 \equiv F_2$. Pero como no es conveniente calcular las clausuras para cada $F_i$, se puede chequear las equivalencias entre dos conjuntos de dependencias funcionales $F_1$ y $F_2$ si $F_1 \vdash F_2 \land F_2 \vdash F_1 \Rightarrow F_1 \equiv F_2$, es decir, todas las dependencias funcionales de $F_2$ pueden ser inferidas a partir de $F_1$ y viceversa. Si esto es posible para ambos conjuntos, entonces $F_1$ es una cobertura canónica de $F_2$.
 #### Atributos Extraños
 Un ***atributo extraño*** en una dependencia funcional es un atributo que aunque esté presente en el lado izquierdo o derecho de la dependencia, no es necesario para establecer la relación de dependencia. En otras palabras, el atributo puede ser eliminado sin afectar la validez de la dependencia funcional.
-- **Atributos extraños a Izquierda**: Dada una dependencia funcional $X \rightarrow Y$ en un conjunto de dependencias $F$. Un atributo $C$ es extraño en $X$ si $C \in X$ y aún se puede deducir $Y$ de $X$ sin $C$. Es decir, $(X -C) \rightarrow Y$. Formalmente, se debe cumplir que: 
+- **Atributos extraños a izquierda**: Dada una dependencia funcional $X \rightarrow Y$ en un conjunto de dependencias $F$. Un atributo $C$ es extraño en $X$ si $C \in X$ y aún se puede deducir $Y$ de $X$ sin $C$. Es decir, $(X -C) \rightarrow Y$. Formalmente, se debe cumplir que: 
 $$F \vdash F' = (F - \{X \rightarrow Y\}) \cup \{(X - C) \rightarrow Y\}$$
-- **Atributos Extraños a Derecha**: Un atributo $C$ es extraño en $Y$ si $C \in Y$ y eliminar $C$, la nueva dependencia $X \rightarrow (Y − C)$ todavía permite inferir $F$. Formalmente, se debe cumplir que:
+- **Atributos extraños a derecha**: Un atributo $C$ es extraño en $Y$ si $C \in Y$ y eliminar $C$, la nueva dependencia $X \rightarrow (Y − C)$ todavía permite inferir $F$. Formalmente, se debe cumplir que:
 $$F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\} \vdash F$$
 
 Dada una dependencia funcional de la forma $X \rightarrow Y$. Se puede verificar si un atributo es extraño tanto por izquierda como por derecha de la siguiente manera:
