--- a/4º Año/Bases de Datos/Unidad 5/2. Normalizacion y Formas Normales.md
+++ b/4º Año/Bases de Datos/Unidad 5/2. Normalizacion y Formas Normales.md
@@ -1,4 +1,4 @@
-Las metas de la normalización es decidir si un esquema de relación $R$ está en buena forma. En caso de que esto no sea así se divide el esquema en subesquemas de la forma $\{R_1, R_2, ... , R_n\}$ tal que, cada subesquema de la relación $R$ este en buena forma y la descomposición sea de join sin perdidas. Cabe aclarar que para que la descomposición sea considerada válida se debe verificar que $R_1 \cup R_2 \cup R_n = R$.
+Las metas de la normalización es decidir si un esquema $R$ está en buena forma. En caso de que esto no sea así se divide el esquema en subesquemas de la forma $\{R_1, R_2, ... , R_n\}$ tal que, cada subesquema de la relación $R$ este en buena forma y la descomposición sea de join sin perdidas. Cabe aclarar que para que la descomposición sea considerada válida se debe cumplir que $R_1 \cup R_2 \cup R_n = R$.
 >[!tldr] Propiedad del Join Sin Perdidas
 >Una descomposición de $R$ en $R_1$ y $R_2$ es join sin perdidas si al menos una de las siguientes dependencias se encuentra en $F^+$:
 >- $R_1 \cap R_2 = R_1$
@@ -16,7 +16,7 @@ Al realizar la descomposición de $R$ con un conjunto de dependencias funcionale
 >
 >![[preservar-dependencias.png]]
 >
->Este testeo se aplica sobre todas las dependencias funcionales de $F$ para chequear si una descomposición preserva dependencias o no.
+>Este testeo se aplica sobre todas las dependencias funcionales de $F$ para chequear si una descomposición preserva las dependencias funcionales o no.
 >Este procedimiento toma un tiempo polinómico para determinar si se violaron o no las dependencias funcionales, mientras que el anterior método mencionado requiere un tiempo exponencial.
 ### Primera Forma Normal
 Un dominio es atómico si se considera que los elementos del dominio son unidades indivisibles, como número o caracteres. Alguno de los ejemplos más comunes de dominios no atómicos son:
@@ -24,7 +24,7 @@ Un dominio es atómico si se considera que los elementos del dominio son unidade
 - Atributos compuestos.
 - Números de identificación de la forma VNT011 que pueden ser descompuestos en dos partes, una numérica y otra alfanumérica.
 
-Se dice que el esquema de una relación $R$ está en la primera forma normal si los dominios de todos los atributos de $R$ son atómicos.
+Se dice que el esquema $R$ está en la primera forma normal si el dominio de todos los atributos de $R$ es atómico.
 ### Forma Normal de Boyce-Codd
 Un esquema $R$ se encuentra en la forma normal de Boyce-Codd con respecto a un conjunto $F$ de dependencias funcionales, si para toda las dependencias funcionales en $F^+$ de la forma $X \rightarrow Y$, donde $X \subseteq R$ y $Y \subseteq R$, se cumple al menos uno de los siguientes casos:
 1. $X \rightarrow Y$ es trivial.
@@ -46,14 +46,14 @@ No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una descom
 
 El algoritmo para transformar un esquema $R$ es un esquema en forma normal de Boyce-Codd consta de los siguientes pasos:
 1. Se calcula $F^+$ para el conjunto de dependencias funcionales $F$.
-2. Para cada dependencia funcional de la forma $X \rightarrow Y$ no trivial, se crea un nuevo esquema $R_i(X, Y)$. Nuestro esquema original está compuesto de la siguiente manera $R = R-R_i \cup R_i -Y$.
-3. El nuevo esquema $R_i$ ya está en forma normal de Boyce-Codd, por lo que se tiene que seguir verificando si no existen más dependencias funcionales que violan las restricciones.
-4. El proceso de descomposición se repite hasta que ya no se encuentran más dependencias funcionales no triviales.
+2. Para cada dependencia funcional de la forma $X \rightarrow Y$ no trivial que viola la forma de Boyce-Codd, se crea un nuevo esquema $R_i(X, Y)$. El esquema original ahora estará conformado de la siguiente manera $R = R-R_i \cup R_i -Y$.
+3. El nuevo esquema $R_i$ ya está en forma normal de Boyce-Codd, por lo que se tiene que seguir verificando si existen otras dependencias funcionales que violan las restricciones.
+4. El proceso de descomposición se repite hasta que ya no se encuentran más dependencias funcionales no triviales que violen la forma de Boyce-Codd.
 
 Para chequear si un esquema $R_i$ en una descomposición de $R$ está en forma normal de Boyce-Codd, se puede hacer de dos maneras:
-1. Se puede testear $R_i$ para la forma normal de Boyce-Codd con respecto a la restricción de $F$ a $R_i$, es decir, evaluar si se cumplen todas las dependencias funcionales de $F^+$ que contengan atributos de $R_i$.
+1. Se puede testear $R_i$ para la forma normal de Boyce-Codd con respecto a la restricción de $F^+$ sobre $R_i$, es decir, evaluar si se cumplen todas las dependencias funcionales de $F^+$ que contengan atributos de $R_i$.
 2. Se puede usar el conjunto $F$ original de dependencias funcionales sobre $R$ y testear lo siguiente:
-	- Para cada conjunto de atributos $X \subseteq R_i$, calcular $X^+$ y verificar que esta clausura incluya todos los atributos de $R_i$ o que no incluya ningún atributo de $R_i - X$. Si la condición es violada por algún $X \rightarrow Y$ en el conjunto $F$, la dependencia funcional $X \rightarrow (X^+ -X) \cap R_i$ se mantiene en $R_i$, y $R_i$ viola la forma normal de Bayce-Codd. Por lo que se debe usar las dependencias funcionales anteriores para descomponer $R_i$.
+	- Para cada conjunto de atributos $X \subseteq R_i$, calcular $X^+$ y verificar que esta clausura incluya todos los atributos de $R_i$ o que no incluya ningún atributo de $R_i - X$. Si la condición es violada por algún $X \rightarrow Y$ en el conjunto $F$, la dependencia funcional $X \rightarrow (X^+ -X) \cap R_i$ no se mantiene en $R_i$, y $R_i$ viola la forma normal de Bayce-Codd. Por lo que se debe usar las dependencias funcionales anteriores para descomponer $R_i$.
 
 No siempre se podrá obtener una descomposición en la forma normal de Bayce-Codd que preserve todas las dependencias funcionales. Por ejemplo, dado el esquema $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$, basándonos en esas dependencias funcionales y aplicando algunos axiomas de Armstrong, obtenemos que $R$ tiene dos claves candidatas $AB$ y $AC$, por lo tanto, $R$ no está en forma normal de Boyce-Codd. El inconveniente en este caso surge en que independientemente de como descompongamos $R$ nunca se preservará la dependencia funcional $AB \rightarrow C$.
 ### Tercera Forma Normal
@@ -62,7 +62,7 @@ La solución a estos problemas es utilizar una forma normal más débil, es deci
 Un esquema $R$ está en tercera forma normal si para todo $X \rightarrow Y \in F^+$ se cumple al menos una de las siguientes condiciones:
 - $X \rightarrow Y$ es trivial.
 - $X$ es una superclave para $R$.
-- Cada atributo $A \in Y - X$ está contenido en alguna clave candidata de $R$. Cada atributo puede estar en diferentes claves primarias.
+- Cada atributo $A \in Y - X$ está contenido en alguna clave candidata de $R$. Sabiendo que cada atributo puede estar en diferentes claves primarias.
 
 Cabe aclarar que si una relación está en una forma normal de Boyce-Codd está también en tercera forma normal. Además, la tercera condición es una relajación de la forma normal de Boyce-Codd para asegurar la preservación de dependencias.
 >[!example] Ejemplo de Tercera Forma Normal
@@ -73,8 +73,8 @@ La ventaja que te brinda la tercera forma normal es que solo se necesita chequea
 Este método de comprobación es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, el cual consta de los siguientes pasos:
 1. Encontrar todas las claves candidatas posibles de acuerdo al conjunto de dependencias funcionales $F$.
 2. Calcular la cobertura canónica $F_C$ para el conjunto de dependencias funcionales $F$, en caso de que esta no sea ya una cobertura canónica.
-3. Para cada par de dependencias funcionales de la forma $X \rightarrow Y$ se creará una nueva relación $R_i(X, Y)$, es decir, se creará una nueva relación que contenga todos los atributos tanto del lado derecho como del lado izquierdo. En caso de que $XY$ ya formen parte de un subesquema entonces no se deberá crear una nueva relación.
-4. Si alguna de las $R_i$ relaciones contiene al menos a una clave candidata el proceso se detiene y $R$ está ya en tercera forma normal. En caso contrario se deberá crear una nueva relación $R_i$ que contenga a cualquiera de las claves candidatas.
+3. Para cada par de dependencias funcionales de la forma $X \rightarrow Y$ se creará una nueva relación $R_i(X, Y)$, es decir, se creará una nueva relación que contenga todos los atributos tanto del lado derecho como del lado izquierdo. En caso de que $XY$ ya formen parte de un subesquema, no se creará una nueva relación.
+4. Si alguna de las $R_i$ relaciones contiene al menos a una clave candidata, el proceso se detiene y $R$ está ya en tercera forma normal. En caso contrario, se deberá construir una nueva relación $R_i$ que contenga a cualquiera de las claves candidatas.
 
 >[!tldr] Comparación entre Tercera Forma Normal y Forma Normal de Boyce-Codd
 >- Siempre es posible descomponer un esquema en subesquemas en tercera forma normal, logrando mantener el join sin perdidas y preservando las dependencias funcionales.
@@ -92,7 +92,7 @@ Sea $R$ un esquema, donde $X \subseteq R$ y $Y \subseteq R$. La dependencia mult
 
 Donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un valor específico en $X$ pueden aparecer con cualquier combinación de valores en $Z$.
 >[!tldr] Join sin Perdida para Dependencias Multivaluadas
->Dado un esquema de relación $R$, siendo $R_1$ y $R_2$ una descomposición de $R$. Sea $G$ un conjunto de dependencias. La descomposición de $R_1$ y $R_2$ tiene join sin perdidas si se cumple al menos una de las siguientes condiciones:
+>Dado un esquema de relación $R$, siendo $R_1$ y $R_2$ una descomposición de $R$. Sea $G$ un conjunto de dependencias funcionales y multivaluadas. La descomposición de $R_1$ y $R_2$ tiene join sin perdidas si se cumple al menos una de las siguientes condiciones:
 >
 >1.  $R_1 \cap R_2 \rightarrow \rightarrow R_1 - R_2$
 >2. $R_1 \cap R_2 \rightarrow \rightarrow R_2 - R_1$
@@ -101,19 +101,19 @@ Donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un val
 ### Cuarta Forma Normal
 Un esquema de relación $R$ está en cuarta forma normal con respecto a un conjunto $G$ de dependencias funcionales y dependencias multivaluadas, si para todas las dependencias multivaluadas en $G^+$ de la forma $X \rightarrow \rightarrow Y$, donde $X \subseteq R$ y $Y \subseteq R$, se cumple algunas de las siguientes condiciones:
 1. $X \rightarrow \rightarrow Y$ es trivial, es decir, $Y \subseteq X$ o $X \cup Y = R$.
-2. $X$ es una super clave de $R$.
+2. $X$ es una superclave de $R$.
 
-Un esquema de relación esta en cuarta forma normal, si todas las dependencias no triviales es de la forma llave determina atributo. Si el esquema de relación esta en cuarta forma normal también esta en forma normal de Boyce-Codd.
+Un esquema de relación está en cuarta forma normal, si todas las dependencias no triviales es de la forma llave determina atributo. Si el esquema de relación está en cuarta forma normal también está en forma normal de Boyce-Codd.
 Existe un algoritmo que te permite realizar las descomposiciones de los esquemas siguiendo la cuarta forma normal, el algoritmo es el siguiente:
 ![[algoritmo-4NF.png]]
 ### Quinta Forma Normal
 Una tabla se dice que está en quinta forma normal si y solo si está en cuarta forma normal y cada dependencia de reunión en ella es implicada por las claves candidatas. En otras palabras, si se descompone una relación, solo se debe poder volver a unirla correctamente usando sus claves candidatas.
 La quinta forma normal implica situaciones en donde una relación de tres vías debe ser reemplazada con tres relaciones binarias, y no con dos como sucede con el caso de cuarta forma normal.
 ## Metas de Diseño Relacional
-Las metas del diseño para una base de datos relacionales son conseguir la forma normal de Boyce-Codd, los join sin perdidas y la preservación de dependencias. Si no se puede alcanzar eso, se debe elegir entre carecer de la preservación de las dependencias funcionales o tener problemas de redundancias debido al uso de la tercera forma normal.
-SQL no provee una forma directa de especificar dependencias funcionales que no sean las superclaves, se puede especificar dependencias funcionales usando aserciones, pero son muy costosas para testear. Aun así tenemos una descomposición que preserva las dependencias funcionales, y usando SQL no sería posible testear de manera eficiente una dependencia funcional cuyo lado izquierdo no sea una clave.
+Las metas del diseño para una base de datos relacionales son conseguir la forma normal de Boyce-Codd, los join sin perdidas y la preservación de dependencias. Si no se puede alcanzar eso, se debe elegir entre carecer de la preservación de las dependencias funcionales o permitir cierta redundancia debido al uso de la tercera forma normal.
+SQL no provee una forma directa de especificar dependencias funcionales que no sean las superclaves, se puede especificar dependencias funcionales usando aserciones, pero son muy costosas para testear. Aun así, tenemos una descomposición que preserva las dependencias funcionales, y usando SQL no sería posible testear de manera eficiente una dependencia funcional cuyo lado izquierdo no sea una clave.
 >[!tldr] Testeo de Dependencia Funcionales entre Relaciones
 >Si una descomposición no preserva dependencias, podemos tener una vista materializada para cada $X \rightarrow Y \in F_C$ que no está preservada en la descomposición. La vista materializada se define como una proyección en $XY$ del `JOIN` de las relaciones en la descomposición.
 >La dependencia funcional $X \rightarrow Y$ se expresa declarando $X$ como clave candidata en la vista materializada, realizar el chequeo por clave candidata es menos costoso que chequear cada dependencia funcional. Este método tiene el inconveniente de que desperdicia espacio, ya que se tiene que almacenar la vista materializada, esto provoca una sobrecarga de tiempo debido a que el gestor de la base de datos se encarga de mantener actualizada la vista materializada; además existen sistemas de bases de datos que no permiten realizar declaraciones de claves en las vistas materializadas.
 
-Generalmente, el proceso de diseño de una base de datos comienza por el modelo conceptual de este mismo a través de un diagrama de Entidad-Relación, para luego convertir este mismo en tablas, obteniendo así nuestro esquema $R$. Este esquema $R$ puede haber sido una relación simple conteniendo todos los atributos de interés y luego se le aplica normalización descomponiendo $R$ en subesquemas.
+Generalmente, el proceso de diseño de una base de datos comienza por el modelo conceptual de este mismo a través de un diagrama de Entidad-Relación, para luego convertir este mismo en tablas, obteniendo así nuestro esquema $R$. Este esquema $R$ puede haber sido una relación simple conteniendo todos los atributos de interés y luego aplicarle normalización descomponiendo $R$ en subesquemas.
