--- a/4º Año/Bases de Datos/Unidad 7/1. Bases de Datos Orientadas a Objetos.md
+++ b/4º Año/Bases de Datos/Unidad 7/1. Bases de Datos Orientadas a Objetos.md
@@ -26,10 +26,10 @@ Recordemos que cada clase se comporta como un objeto que contiene los diferentes
 Los objetos de las bases de datos orientadas a objetos conservan su identidad, aunque algunas de sus propiedades o las definiciones de los métodos cambien total o parcialmente con el tiempo. Este concepto de identidad no se aplica a las tuplas de las bases de datos relacionales. Las identidades de cada objeto puede ser asignada a través de alguna de las siguientes formas:
 - **Valor de datos**. Esta forma de identidad es utilizada en las bases de datos relacionales. En este caso, el valor de uno de los atributos del objeto lo identificará unívocamente.
 - **Nombre proporcionado por el usuario**. Esta forma de identidad suele utilizarse para los archivos en los sistemas de archivos. En este caso es el usuario pueden generar de forma manual el identificador.
-- **Incorporada**. Cada objeto recibe del sistema un identificador de manera automática en el momento en que se crea.
+- **Incorporada**. Cada objeto recibe, por parte del sistema, un identificador de manera automática en el momento en que se crea.
 
 >[!tldr] Objetos Compuestos
->Aquellos objetos que contienen en alguna de sus propiedades a otros objetos se los denomina **objetos complejos o compuestos**. Por lo general cuando se posee este tipo de composiciones, esas propiedades hacen referencia al objeto perteneciente a la clase.
+>Aquellos objetos que contienen en alguna de sus propiedades a otros objetos se los denomina ***objetos complejos o compuestos***. Por lo general cuando se posee este tipo de composiciones, esas propiedades hacen referencia al objeto perteneciente a la clase.
 ## Lenguaje de Programación Persistente
 Las bases de datos orientadas a objetos extienden un lenguaje de programación orientado a objetos ya existente para darle persistencia a los datos. Estos ***lenguajes de programación persistente (LPP)***, se diferencian de los lenguajes con SQL incorporado por los siguientes motivos:
 1. En los lenguajes con SQL incorporado, el sistema de tipos del lenguaje anfitrión suele ser diferente al del lenguaje para la gestión de los datos.
@@ -39,7 +39,7 @@ Las bases de datos orientadas a objetos extienden un lenguaje de programación o
 
 La persistencia de los datos en los lenguajes de programación persistente pueden ser especificadas de alguna de las siguientes maneras:
 - **Persistencia por clases**: Se declara que una clase es persistente.
-- **Persistencia por creación**: Se introduce una nueva sintaxis para crear los objetos persistentes, mediante la extensión de la sintaxis para la creación de los objetos transitorios.
+- **Persistencia por creación**: Se introduce una nueva sintaxis para crear los objetos persistentes, y otra extensión de la sintaxis para la creación de los objetos transitorios.
 - **Persistencia por marcas**: Consiste en marcar los objetos como persistentes después de haberlos creado.
 - **Persistencia por alcance**: Uno o varios objetos se declaran como objetos persistentes de manera explícita, estos objetos reciben el nombre de ***objetos raíz***. Todos los demás objetos serán persistentes si y solo si son alcanzables desde el objeto raíz mediante una secuencia de una o más referencias.
 
