--- a/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
@@ -1,5 +1,5 @@
 El ***modelo de datos relacional orientado a objetos*** extiende el modelo de datos relacional ofreciendo un sistema de tipos más rico que incluye tipos de datos complejos y orientación a objetos. Teniendo a su vez que extender los lenguajes de consultas para permitir que estos trabajen con datos mucho más complejos.
-Los modelos de datos Objeto-Relacional, combinan rasgos de los modelos relacionales y de los modelos orientados a objetos más tradicionales. Cuyas principales características son las siguientes:
+Los modelos de datos objeto-relacional, combinan rasgos de los modelos relacionales y de los modelos orientados a objetos más tradicionales. Cuyas principales características son las siguientes:
 - Poseen un sistema de tipos enriquecido al igual que las bases de datos orientadas a objetos, combinado con relaciones como las básicas para el almacenamiento de datos.
 - Implementa los rasgos de la orientación a objetos dentro del propio sistema de tipos de la base de datos, ya que utiliza el modelo relacional como modelo subyacente.
 
@@ -27,16 +27,16 @@ Los tipos definidos por los usuarios pueden ser clasificados de la siguiente man
 2. **Tipo estructurado como valor**: Son tipos de datos compuestos que son utilizados como propiedad por otros tipos estructurados. Estos tipos de datos permiten la definición de funciones y procedimientos que pueden ser utilizados para realizar comparaciones entre instancias de este tipo.
 3. **Tipo estructurado como objeto**: Son tipos de datos estructurados que se utilizan para representar entidades del mundo real y por lo general se emplean para generar una tabla a partir de ellos, donde cada objeto se representa como una fila de la tabla, asignando un identificador único a cada objeto.
 ### Definición de Métodos
-Cuando se está especificando un nuevo tipo de dato, también es posible declarar funciones que implemeten comportamientos propios para los objetos de ese tipo. Estas funciones pueden ser sobrecargadas la cantidad de veces que se necesite, con la particularidad de que el primer parámetro de estas funciones va a ser el ***self***, que hará referencia al propio objeto.
-Al igual que en los lenguajes orientados a objetos convencionales, las funciones pueden ser ***constructores***, utilizados para instanciar nuevos objetos. ***Estáticas***, es decir, forman parte de la definición del tipo de dato y no de sus instancias. Y las funciones ***Miembro*** que pueden ser llamadas por todas las instancias de ese tipo.
+Cuando se está especificando un nuevo tipo de dato, también es posible declarar funciones que implementen comportamientos propios para los objetos de ese tipo. Estas funciones pueden ser sobrecargadas la cantidad de veces que se necesite, con la particularidad de que el primer parámetro de estas funciones va a ser el ***self***, que hará referencia al propio objeto.
+Al igual que en los lenguajes orientados a objetos convencionales, las funciones pueden ser ***constructores***, utilizados para instanciar nuevos objetos. ***Estáticas***, es decir, forman parte de la definición del tipo de dato y no de sus instancias. Y las funciones ***miembro*** que pueden ser llamadas por todas las instancias de ese tipo.
 ## Tipos Estructurados Brindados por las Bases de Datos
-Muchas las bases de datos Objeto-Relacional brindan un conjunto de tipos compuestos básicos que facilitan la creación de modelos. Algunas de estos tipos son los siguientes:
-- **ROW**: Son el equivalentes a los registros de los lenguajes de programación convencionales, estos tipos pueden utilizarse para declarar una columna de una tabla,  además se pueden anidar ***rows***.
-- **REF TYPE**: Son similares a un puntero, hacen referencia un tipo estructurado. Solo se puede hacer referencia otros tipos estructurados, permitiendo la navegación entre objetos facilitando el acceso y/o actualización de objetos referenciados. Existen dos tipos de referencias las que tienen un alcance definido y aquellas sin alcance.
-- **VARRAY**: Son un conjunto ordenado de elementos que pueden ser accedidos a través de un indice, el tamaño de estas estructuras de datos es especificada al momento de la inicialización aunque su tamaño puede ser cambiado. Estas son almacenados como BLOB, por esta razón los ***varrays*** no pueden contener objetos que tengan como propiedad a un tipo LOB.
-- **NESTED TABLES**: Es un tipo de estructura de datos que puede contener una cantidad variable de elementos, el orden de los elementos no es mantenido. Se pueden seleccionar, insertar, borrar y modificar elementos como en cualquier tabla. Se almacenan separadamente y contiene una columna que indica la fila u objeto de la tabla padre a la que hace referencia cada objeto.
+Muchas las bases de datos objeto-relacional brindan un conjunto de tipos compuestos básicos que facilitan la creación de modelos. Algunos de estos tipos son los siguientes:
+- `ROW`: Son el equivalente a los registros de los lenguajes de programación convencionales, estos tipos pueden utilizarse para declarar una columna de una tabla, además se pueden anidar ***rows***.
+- `REF TYPE`: Son similares a un puntero, hacen referencia un tipo estructurado. Solo se puede hacer referencia otros tipos estructurados, permitiendo la navegación entre objetos facilitando el acceso y/o actualización de objetos referenciados. Existen dos tipos de referencias las que tienen un alcance definido y aquellas sin alcance.
+- `VARRAY`: Son un conjunto ordenado de elementos que pueden ser accedidos a través de un índice, el tamaño de estas estructuras de datos es especificada al momento de la inicialización aunque su tamaño puede ser cambiado. Estas son almacenados como BLOB, por esta razón los ***varrays*** no pueden contener objetos que tengan como propiedad a un tipo LOB.
+- `NESTED TABLES`: Es un tipo de estructura de datos que puede contener una cantidad variable de elementos, el orden de los elementos no es mantenido. Se pueden seleccionar, insertar, borrar y modificar elementos como en cualquier tabla. Se almacenan separadamente y contiene una columna que indica la fila u objeto de la tabla padre a la que hace referencia cada objeto.
 >[!example] Colecciones Multinivel
->Las colecciones multinivel son colecciones que poseen otras colecciones como elementos, la combinaciones son variadas y por lo general no suelen ser muy recomendado su uso ya que generan mucha confusión a los usuarios.
+>Las colecciones multinivel son colecciones que poseen otras colecciones como elementos, las combinaciones son variadas y por lo general no suelen ser muy recomendado su uso, ya que generan mucha confusión a los usuarios.
 
 >[!caution] Aclaración sobre las Colecciones y Tipos Definidos por el Usuario
 >Toda la información presentada anteriormente en este archivo fue realizado utilizando como base Oracle, puede que otras bases de datos posean o no algunos de los tipos de datos anteriormente mencionados. Aun así las explicaciones están hechas lo más general posible de forma que resulte útil para la mayoría de casos posibles.
