--- a/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
+++ b/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
@@ -27,7 +27,7 @@ Por otro lado, en los archivos con registros de longitud variable, el registro i
 
 Existen diversas formas de implementar registros de longitud variables, a continuación veremos algunas maneras de implementarlos:
 - **Representación en cadena de bytes**: Es una forma simple de implementar los registros variables, consiste en agrupar bytes de forma consecutiva e indicar con un delimitador el final del registro. Este modelo de implementación tiene la desventaja de que no resulta sencillo volver a utilizar el espacio ocupado anteriormente por un registro borrado y por lo general no queda espacio para el aumento del tamaño de los registros.
-- **Estructura de Páginas con Ranuras**: Consiste en un bloque que posee una cabecera al principio, el cual contiene la siguiente información:
+- **Estructura de páginas con ranuras**: Consiste en un bloque que posee una cabecera al principio, el cual contiene la siguiente información:
 	1. El número de elementos del registro de la cabecera.
 	2. El final del espacio vacío del bloque.
 	3. Un arreglo que contiene la ubicación y el tamaño de cada registro en el bloque.
@@ -48,19 +48,19 @@ Los archivos manejados por una base de datos puede categorizarse de acuerdo a la
 Los archivos secuenciales están diseñados para procesar registros de manera eficiente según un orden definido por una ***clave de búsqueda***. Para recuperar registros rápidamente, cada registro incluye un puntero que señala al siguiente en el orden establecido por dicha clave. Para reducir el número de accesos a los bloques durante el procesamiento, los registros se almacenan físicamente siguiendo el orden de la clave de búsqueda.
 Sin embargo, resulta difícil mantener el orden físico secuencial a medida que se insertan y se borran registros, puesto que resulta costoso desplazar muchos registros como consecuencia de una única operación de inserción o de borrado. El borrado se puede gestionar mediante cadenas de punteros, conocidas como ***lista de libres***, y para las inserciones se siguen estas reglas:
 1. Localizar el registro que precede al que se va a insertar según el orden de la clave de búsqueda.
-2. Si hay un espacio vacío en la lista de libres dentro del mismo bloque que dicho registro, el nuevo registro se insertará ahí. De lo contrario, se almacenará dicho registro en un bloque de desbordamiento. En cualquier caso, los punteros deben ajustarse para mantener el orden según la clave de búsqueda.
+2. Si hay un espacio vacío en la lista de libres dentro del mismo bloque en el que dicho registro debe insertarse, entonces ese registro se inserta en el bloque. De lo contrario, se almacenará dicho registro en un bloque de desbordamiento. En cualquier caso, los punteros deben ajustarse para mantener el orden según la clave de búsqueda.
 
 >[!important] Características de los Archivos Secuenciales
 >- Permite la inserción rápida de nuevos registros.
 >- Funciona bien para un número relativamente pequeño de registros en los bloques de desbordamiento.
->- Periodicametne se debe reorganizar el archivo de modo que vuelva a estar físicamente en orden secuencial.
+>- Periodicamente se debe reorganizar el archivo de modo que vuelva a estar físicamente en orden secuencial.
 #### Organización por Agrupación
 Algunos sistemas de gestión de bases de datos relacionales almacenan cada relación en un archivo separado para aprovechar al máximo el sistema de archivos del sistema operativo. Generalmente, las tuplas de cada relación se representan como registros de longitud fija, lo que es adecuado para sistemas diseñados para computadoras personales, donde es crucial mantener un tamaño reducido del código del gestor de base de datos.
 Otros sistemas de bases de datos de mayor tamaño no confían la gestión de archivos al sistema operativo. En su lugar, asignan un archivo de gran tamaño al motor de base de datos, donde se almacenan todas las relaciones, dejando la gestión de dicho archivo al gestor de la base de datos. En tal caso estaríamos ante la presencia de una organización de archivos por agrupación.
-Las agrupaciones de archivos son una forma de organización que almacena registros de dos o más relaciones en un mismo bloque. Aunque este enfoque mejora el rendimiento de las operaciones de *joins*, puede aumentar el tiempo de procesamiento en otros tipos de consultas, como aquellas que acceden a los registros de una única relación. En estos casos, se requieren más accesos a los bloques en comparación con otros esquemas, ya que, en lugar de encontrar varios registros de una misma relación en un bloque, cada uno puede estar en bloques diferentes.
+Las agrupaciones de archivos son una forma de organización en la cual se almacena registros de dos o más relaciones en un mismo bloque. Aunque este enfoque mejora el rendimiento de las operaciones de *joins*, puede aumentar el tiempo de procesamiento en otros tipos de consultas, como aquellas que acceden a los registros de una única relación. En estos casos, se requieren más accesos a los bloques en comparación con otros esquemas, ya que en lugar de encontrar varios registros de una misma relación en un bloque, cada uno puede estar en bloques diferentes.
 Encontrar todos los registros de una tabla específica en un esquema de agrupación no es posible sin el uso de estructuras adicionales. Por ejemplo, para localizar todos los registros de una tabla determinada, sería necesario vincular todos los registros de este tipo mediante punteros.
 ### Almacenamiento con Diccionarios de Datos
-Hasta ahora solo se ha considerado la representación de las propias relaciones. Un sistema de bases de datos relacionales necesita tener datos sobre las relaciones, como puede ser su esquema. Esta información se denomina ***diccionario de datos*** o ***catálogo del sistema***. Entre los tipos de información que debe guardar el sistema figuran los siguientes:
+Hasta ahora solo se ha considerado la representación de las propias relaciones. Un sistema de bases de datos necesita tener datos sobre las relaciones, como puede ser su esquema. Esta información se denomina ***diccionario de datos*** o ***catálogo del sistema***. Entre los tipos de información que debe guardar el sistema figuran los siguientes:
 -  El nombre de las relaciones.
 - El nombre de los atributos de cada relación.
 - El dominio y la longitud de los atributos.
