--- a/4º Año/Bases de Datos/Unidad 8/2. Organizacion por Asociacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/2. Organizacion por Asociacion.md
@@ -1,5 +1,5 @@
 ## Archivos Asociativos
-Como ya hemos mencionado anteriormente existen dos tipos de archivos, los secuenciales que poseen todos sus valore ordenados y los asociativos en los cuales los datos poseen una distribución uniforme en un conjunto de cajones. En los archivos asociativos el valor asociado a cada cajón está determinado por una función de asociación.
+Como ya hemos mencionado anteriormente existen diversas formas en las que se puede organizar los archivos de las bases de datos, entre ellas se encuentran los archivos asociativos en los cuales los datos poseen una distribución uniforme en un conjunto de cajones. En los archivos asociativos el valor asociado a cada cajón está determinado por una función de asociación.
 Los archivos secuenciales tienen el inconveniente de que hay que acceder a una estructura de índices para localizar los datos y, por ende se realizan más operaciones de E/S. Mientras que la organización de archivos basada en la técnica de asociación permite evitar el acceso a la estructura de índice, ya que la asociación proporciona, de forma indirecta, una forma de construir índices.
 En una organización de archivos por asociación se obtiene la dirección del bloque de disco que contiene el registro deseado mediante el cálculo directo de una función sobre el valor de la clave de búsqueda del registro. Se utiliza el término cajón para indicar una unidad de almacenamiento que puede guardar uno o más registros.
 >[!tldr] Definición formal de la Organización por Asociación
@@ -28,13 +28,12 @@ No siempre cuando se inserta un registro, el cajón al que se asigna va a tener 
 
 Para reducir la probabilidad de desbordamiento de cajones, se escoge el número de cajones mediante la siguiente ecuación:
 $$\frac{n_r}{f_r}\times(1 + d)$$
-
 Donde $d$ es un factor normalmente con un valor cercano a $0,2$. Aun con la asignación de unos pocos más de cajones de los requeridos, el desbordamiento de cajones todavía puede suceder. En estos casos se utiliza ***cajones de desbordamiento***, en los cuales si un registro se tiene que insertar en un cajón $c$ y $c$ ya está lleno, se proporcionará un cajón de desbordamiento para $c$ y el registro se insertará en el cajón de desbordamiento. Si el cajón de desbordamiento está también lleno, se proporcionará otro cajón de desbordamiento, y así sucesivamente, generando una lista enlazada denominada ***cadena de desbordamiento***, tal y como se puede apreciar en la imagen.
 ![[cadena-desbordamiento.png]]
 
 La forma de la estructura asociativa que se acaba de describir se denomina algunas veces ***asociación cerrada***. Existe otra alternativa llamada asociación abierta, en la cual se fija el conjunto de cajones y no hay cadenas de desbordamiento. Si un cajón está lleno, los registros se insertan en algún otro cajón del conjunto inicial $C$ de cajones. Una política para selección el cajón de destino es utilizar el siguiente cajón que tenga espacio, esta política recibe el nombre de ***ensayo lineal***. Aun así las asociaciones cerradas son las más utilizadas por los sistemas de gestión de bases de datos.
 ### Índices Asociativos
-La asociatividad se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados dentro de una estructura de archivo asociativo. Estos índices se construyen de la siguiente manera:
+La estructura asociativa se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados dentro de una estructura de archivo asociativo. Estos índices se construyen de la siguiente manera:
 1. Se aplica una función de asociación sobre la clave de búsqueda para identificar un cajón.
 2. Se almacenan la clave y los punteros asociados en el cajón o en los cajones de desbordamiento.
 
@@ -46,7 +45,7 @@ La necesidad de fijar el conjunto $C$ de direcciones de cajón presenta un probl
 3. Reorganizar periódicamente la estructura asociativa en respuesta al crecimiento del archivo, esto implica elegir una nueva función de asociación, volviendo a calcular la función de asociación de cada registro en el archivo y generando nuevas asignaciones de los cajones.
 
 Algunas técnicas de ***asociación dinámica*** permiten modificar la función de asociación dinámicamente para acomodarse al aumento o disminución del tamaño de la base de datos.
-Una forma de asociación dinámica es la ***asociación extensible***, la cual hace frente a los cambios del tamaño de la base de datos dividiendo y fusionando los cajones a medida que esta aumenta o disminuye. Como resultado se conserva eficazmente el espacio. Por otra parte, como la reorganización se realiza sobre un cajón a la vez, la degradación del rendimiento es aceptablemente baja.
+Una forma de asociación dinámica es la ***asociación extensible***, la cual hace frente a los cambios del tamaño de la base de datos dividiendo y fusionando los cajones a medida que esta aumenta o disminuye, gestionando de forma eficiente el espacio. Por otra parte, como la reorganización se realiza sobre un cajón a la vez, la degradación del rendimiento es aceptablemente baja.
 Con la asociación extensible se elige una función de asociación $h$ con las propiedades deseadas de uniformidad y aleatoriedad. Sin embargo, esta función de asociación genera valores dentro de un rango relativamente amplio, llamado, enteros binarios de $b$ bits. Inicialmente, no se utiliza el total de $b$ bits del valor de la función de asociación, para hacer redirigir el valor a su cajón correspondiente. En cualquier caso, empleamos $i$ bits, donde $0 < i < b$. Estos $i$ bits son utilizados como desplazamiento en la ***tabla de direcciones de cajones (TDC)*** la cual contiene un puntero a cada uno de los cajones con los índices. El valor de $i$ aumenta o disminuye de acuerdo a la cantidad de cajones que existan en ese momento, ya que para hacer frente al crecimiento de la base de datos se crean y eliminan cajones bajo demanda, de acuerdo a la cantidad de registros que existan.
 #### Consulta e Inserciones de Datos
 Para localizar el cajón que contiene el valor de la clave de búsqueda $K_l$, se toman los primeros $i$ bits más significativos de $h(K_l)$, se busca la entrada de la tabla que corresponda a esta cadena de bits, y se sigue el puntero del cajón en la entrada de la tabla. En caso de que se desee insertar un registro con un valor de la clave de búsqueda $K_l$ se sigue el mismo procedimiento de búsqueda que antes, llegando a algún cajón $j$. 
