--- a/4º Año/Bases de Datos/Unidad 8/3. Indices e Indexacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/3. Indices e Indexacion.md
@@ -13,14 +13,6 @@ Los atributos o conjunto de atributos usados para buscar en un archivo reciben e
 Los índices primarios también son llamados ***índices con agrupación*** mientras que los índices cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo se llaman índices secundarios o ***índices sin agrupación***.
 ## Índices Secuenciales
 Por lo general se suele asumir que todos los archivos están ordenados secuencialmente según alguna clave de búsqueda, este tipo de archivos reciben el nombre de ***archivos secuenciales indexados***. Y suelen ser empleados en aquellas aplicaciones que demandan un procesamiento secuencial del archivo completo así como un acceso directo a sus registros.
-### Índices Secundarios
-Los índices secundarios son aquellos cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo, por lo tanto, estos deben ser densos, con una entrada en el índice por cada valor de la clave de búsqueda, y un puntero a cada registro del archivo. Un índice secundario sobre una clave candidata es como un índice denso primario, con la particularidad de que los registros apuntados por los sucesivos valores del índice no están almacenados secuencialmente según ese campo.
-Si la clave de búsqueda de un índice secundario no es una clave candidata, no sería suficiente apuntar solo al primer registro de cada valor de la clave de búsqueda, ya que el resto de registros con el mismo valor de la clave de búsqueda podrían estar en cualquier otro sitio del archivo, para solucionar este problema se puede usar una estructura multinivel para implementar los índices secundarios sobre claves de búsquedas que no sean claves candidatas.
-Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
->[!tldr] Índices de Cobertura
->Los ***índices de cobertura*** almacenan los valores de algunos atributos junto con los punteros a los registros. El almacenamiento de valores de atributo adicionales es útil en los índices secundarios, ya que permite responder algunas consultas utilizando únicamente el índice, sin ni siquiera buscar en los registros de datos.
-
-Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
 ### Índices Densos y Dispersos
 Un ***registro índice o entrada del índice*** consiste en el valor de la clave de búsqueda y punteros a uno o más registros con ese valor de la clave de búsqueda. Por su parte el puntero a un registro consiste en el identificador del bloque en disco y un desplazamiento interno que identifica el registro dentro de ese bloque, de acuerdo al tipo de punteros utilizados podemos dividir a los índices ordenados en dos clases:
 - **Índices densos**: Posee un registro índice por cada valor de clave de búsqueda que exista en el archivo. Los registros índices contiene el valor de la clave de búsqueda y el puntero al primer registro con el valor de esa clave de búsqueda.
@@ -36,14 +28,22 @@ Generalmente, es más rápido localizar un registro si se usa un índice denso e
 Los diseñadores del sistema debe buscar un balance entre el tiempo de acceso, el espacio adicional requerido y tiempo de actualización. Si bien la decisión sobre que tipo de índices se deben utilizar depende de la aplicación en particular, una buena decisión es tener un índice disperso con una entrada del índice por cada bloque, de esta forma se minimizan los accesos a bloques mientras mantenemos el tamaño del índice tan pequeño como sea posible.
 >[!caution] Actualización y Mantención de los Índices
 >Sin importar el tipo de índice que se esté usando, los índices se deben actualizar siempre que se inserte o borre un registro del archivo, este tipo de operaciones van a realizarse o no dependiendo de si el índice es denso o disperso, por ejemplo, en el caso de los índices dispersos, no todas las operaciones de inserción y borrados actualizarán los índices.
-### Índices Multinivel
-Aunque se utilicen índices dispersos, el propio índice podría ser demasiado grande para un procesamiento eficiente, si un índice es lo bastante pequeño como para guardarlo en la memoria principal, el tiempo de búsqueda para encontrar una entrada sería mucho menor. Mientras que si el índice es tan grande que se debe guardar en disco, la eficiencia en las consultas disminuyen, ya que se deben subir y bajar bloques del archivo de índices.
-Los Índices se almacenan como archivos secuenciales en disco, esto significa que buscar una entrada implicará leer varios bloques de disco. Esto empeora si se están utilizando bloques de desbordamiento, puesto que se tendría que recorrer todos los registros del archivo de forma casi obligatoria.
-Para resolver este problema se trata el índice como un archivo secuencial y se construye un índice disperso sobre el índice primario. En caso de que se quiera localizar un registro, se usa en primer lugar una búsqueda binaria sobre el índice más externo para buscar el registro con el mayor valor de la clave de búsqueda que sea menor o igual al valor deseado. El puntero de ese registro índice apunta a un bloque en el índice más interno, sobre el cual se realizará el mismo proceso de búsqueda, dando como resultado un registro índice cuyo puntero apunta al bloque del archivo que contiene el registro buscado.
 
+### Índices Multinivel
+Aunque se utilicen índices dispersos, el propio índice podría ser demasiado grande para un procesamiento eficiente, si un índice es lo bastante pequeño como para guardarlo en la memoria principal, el tiempo de búsqueda para encontrar una entrada sería mucho menor. Mientras que si el índice es grande es probable que se deba guardar en disco, la eficiencia en las consultas disminuyen, ya que se deben subir y bajar bloques del archivo de índices.
+Los índices se almacenan como archivos secuenciales en disco, esto significa que buscar una entrada implicará leer varios bloques de disco. Esto empeora si se están utilizando bloques de desbordamiento, puesto que se tendría que recorrer todos los registros del archivo de forma casi obligatoria.
+Para resolver este problema se trata el índice como un archivo secuencial y se construye un índice disperso sobre el índice primario. En caso de que se quiera localizar un registro, se usa en primer lugar una búsqueda binaria sobre el índice más externo para buscar el registro con el mayor valor de la clave de búsqueda que sea menor o igual al valor deseado. El puntero de ese registro índice apunta a un bloque en el índice más interno, sobre el cual se realizará el mismo proceso de búsqueda, dando como resultado un registro índice cuyo puntero apunta al bloque del archivo que contiene el registro buscado.
 ![[indices-multinivel.png]]
 
 Usando los dos niveles de indexación y con el índice más externo en memoria principal, tenemos que leer un único bloque índice en vez de los siete que se leían con la búsqueda binaria. Si al archivo es extremadamente grande, incluso el índice exterior podría crecer demasiado para caber en la memoria principal. En este caso se podría crear un nuevo nivel de indexación, este proceso de división se podría repetir tantas veces como fuese necesario.
+### Índices Secundarios
+Los índices secundarios son aquellos cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo, por lo tanto, estos deben ser densos, con una entrada en el índice por cada valor de la clave de búsqueda, y un puntero a cada registro del archivo. Un índice secundario sobre una clave candidata es como un índice denso primario, con la particularidad de que los registros apuntados por los sucesivos valores del índice no están almacenados secuencialmente según ese campo.
+Si la clave de búsqueda de un índice secundario no es una clave candidata, no sería suficiente apuntar solo al primer registro de cada valor de la clave de búsqueda, ya que el resto de registros con el mismo valor de la clave de búsqueda podrían estar en cualquier otro sitio del archivo, para solucionar este problema se puede usar una estructura multinivel para implementar los índices secundarios sobre claves de búsquedas que no sean claves candidatas.
+Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
+>[!tldr] Índices de Cobertura
+>Los ***índices de cobertura*** almacenan los valores de algunos atributos junto con los punteros a los registros. El almacenamiento de valores de atributo adicionales es útil en los índices secundarios, ya que permite responder algunas consultas utilizando únicamente el índice, sin ni siquiera buscar en los registros de datos.
+
+Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
 ## Índices de Árbol B⁺
 El principal problema de los índices mencionados anteriormente es el rendimiento, ya que tanto la búsqueda en el índice como el recorrido secuencial de los datos se ven afectados negativamente a medida que aumentan los tamaños de los archivos, dado que después de cierto tiempo están obligados a reordenarse para mantener su eficiencia.
 En este contexto, la estructura de índice de árbol B⁺ es la más utilizada entre las estructuras de índices porque mantiene su eficiencia incluso con la inserción y eliminación de datos. Un índice de árbol B⁺ toma la forma de un *árbol equilibrado* donde la profundidad desde la raíz a cada una de sus hojas es la misma. Cada nodo que no es una hoja tiene entre $p/2$ y $p$ hijos, donde $p$ es el orden o grado del árbol el cual es fijo y depende de la cantidad de registros que puedan entrar en cada nodo u hoja.
@@ -58,17 +58,17 @@ En este contexto, la estructura de índice de árbol B⁺ es la más utilizada e
 
 Utilizar esta estructura de datos implica una reducción en el rendimiento al insertar y al borrar datos, además de ocupar espacio adicional. Aun así, este tiempo adicional es aceptable incluso en archivos con altas frecuencias de modificación, ya que este tipo de estructuras evitan una reorganización masiva o total del archivo. En pocas palabras, un ***índice de árbol B⁺*** es un índice multinivel en el cual todos sus nodos internos tienen la siguiente forma:
 $$
-< P_1 , K_1, P_2 , K_2, \cdots, K_{q–1} , P_q>
+< P_1 , K_1, P_2 , K_2, \dots, K_{q–1} , P_q>
 $$
 
 Donde $q \leq p$, y $K_i$ son las claves de búsqueda, mientras que $P_i$ son los punteros de árbol. Esta estructura de datos posee las siguientes características:
-1. Para todos los elementos de los nodos internos se cumple que $K_1 < K_2 < K_3 \cdots$. Es decir, sus elementos están ordenados.
+1. Para todos los elementos de los nodos internos se cumple que $K_1 < K_2 < K_3 <\dots$, es decir, sus elementos están ordenados.
 2. Cada nodo interno a excepción de la raíz tiene como máximo $p$ punteros de árbol y al menos $p /2$ punteros de árbol, es decir, cada nodo intermedio está siempre medio lleno.
 3. El nodo raíz tiene como mínimo dos punteros de árbol si es un nodo interno.
 4. Un nodo con $q$ punteros tiene $q – 1$ valores de clave de búsqueda.
 5. Todo nodo hoja de los árboles B⁺ de orden $p$ tienen la siguiente forma:
 $$
-<< K_1, Pr_1, K_2, Pr_2 ,\cdots, K_{q–1} , Pr_{q-1}> P_{sig}>
+<< K_1, Pr_1, K_2, Pr_2 ,\dots, K_{q–1} , Pr_{q-1}> P_{sig}>
 $$
 
 6. Cada nodo hoja tiene al menos $p_{hoja} / 2$ valores.
@@ -91,7 +91,7 @@ Para procesar una consulta, se tiene que recorrer un camino en el árbol desde l
 >Supongamos que el tamaño de las claves de búsqueda posee un tamaño de 12 bytes y un tamaño del puntero a disco de 8 bytes, entonces $p$ está alrededor de 200. Incluso con una estimación más conservadora de 32 bytes para el tamaño de las claves de búsqueda, $p$ está en torno a 100. Con $p = 100$, si se tienen un millón de valores de clave de búsqueda en el archivo, una búsqueda necesita solamente $log_{50} (1.000.000) = 4$ accesos a nodos.
 
 El borrado y la inserción son mucho más complejos que las búsquedas, ya que podría ser necesario dividir un nodo como resultado de una inserción o fusionar y/o redistribuir nodos como resultado de una eliminación ($q < p/2$). Además, cuando se divide un nodo o se fusionan un par de ellos, se debe asegurar que el árbol siga estando equilibrado.
-Para las inserciones se utiliza la misma técnica utilizada para la búsqueda de registros, si el valor de la clave de búsqueda ya aparece en el nodo hoja, se inserta un nuevo registro en el archivo y, si es necesario, un puntero al cajón. Pero si el valor de la clave de búsqueda no aparece, se inserta el valor en el nodo hoja de tal manera que las clave de búsqueda permanezcan ordenadas, para posteriormente insertar el nuevo registro en el archivo y, si es necesario, creamos un nuevo cajón con el puntero apropiado.
+Para las inserciones se utiliza la misma técnica utilizada para la búsqueda de registros, si el valor de la clave de búsqueda ya aparece en el nodo hoja, se inserta un nuevo registro en el archivo y, si es necesario, un puntero al cajón. Pero si el valor de la clave de búsqueda no aparece, se inserta el valor en el nodo hoja de tal manera que las clave de búsqueda permanezcan ordenadas, para posteriormente insertar el nuevo registro en el archivo y, si es necesario, se crea un nuevo cajón con el puntero apropiado.
 Para la eliminación de un registro, primero se realiza una búsqueda para encontrar el o los registros deseados y luego eliminarlos del archivo. Si no hay un cajón asociado con el valor de la clave de búsqueda o si el cajón se queda vacío como resultado del borrado, se borra el valor de la clave de búsqueda del nodo hoja.
 ## Índices de Árbol B
 Los ***índices de árbol B*** son similares a los índices de árbol B⁺, con una leve diferencia en sus enfoques, ya que los árboles B eliminan el almacenamiento redundante de los valores de la clave de búsqueda, puesto que las claves de búsqueda no están repetidas en el árbol B, disminuyendo el espacio empleado para almacenar el índice. Sin embargo, como las claves de búsqueda que aparecen en los nodos internos no aparecen en ninguna otra parte del árbol B, se debe incluir un campo adicional para un puntero a datos por cada clave de búsqueda de un nodo interno, estos campos adicionales apuntan a registros del archivo o a los cajones de la clave de búsqueda asociada. En otras palabras, el grado de los árboles B va a ser menor a los del los árboles B⁺.
