--- a/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
@@ -6,12 +6,12 @@ La primera acción que el sistema tiene que emprender para procesar una consulta
 >[!caution] Representación de las Consultas a las Bases de Datos
 >Con fines didácticos, todas las explicaciones se realizarán utilizando el álgebra relacional como representación intermedia en el procesamiento y optimización de consultas en bases de datos. Actualmente, las bases de datos emplean una representación intermedia de las consultas SQL, similar a las utilizadas por los compiladores e interpretes, para procesamiento de las consultas.
 
-Dada una consulta hay generalmente distintos métodos para obtener la respuesta. Por ejemplo, ya se ha visto que en SQL se puede expresar una consulta de diferentes maneras. Cada consulta SQL puede traducirse a diferentes expresiones del álgebra relacional. Además de esto, la representación de una consulta en el álgebra relacional especifica de manera parcial cómo evaluar la consulta.
+Dada una consulta hay generalmente distintos métodos para obtener la respuesta. Cada consulta SQL puede traducirse a diferentes expresiones del álgebra relacional. Además de esto, la representación de una consulta en el álgebra relacional especifica de manera parcial cómo evaluar la consulta.
 Para especificar completamente cómo evaluar una consulta, no basta con proporcionar la expresión del álgebra relacional, además hay que anotar en ella las instrucciones que especifiquen cómo evaluar cada operación, este nuevo parámetro podría servir para establecer las prioridades en las consultas.
 Las operaciones del álgebra relacional anotadas con instrucciones sobre su evaluación reciben el nombre de ***primitivas de evaluación***. El ***motor de ejecución de consultas*** utilizan secuencias de operaciones primitivas para escoger y establecer el ***plan de ejecución de la consulta*** o ***plan de evaluación de la consulta***, que posteriormente será ejecutado.
 Los diferentes planes de evaluación de una misma consulta dada pueden tener costes distintos. No se puede esperar que los usuarios escriban las consultas de manera que sugieran el plan de evaluación más eficiente. En su lugar, es responsabilidad del sistema construir un plan de evaluación que minimice el coste de la evaluación de la consulta; esta tarea se denomina ***optimización de consultas***.
 ## Optimización de Consultas
-La optimización de consultas es el proceso de selección del plan de evaluación de las consultas más eficiente de entre las muchas estrategias generalmente disponibles para el procesamiento de una consulta dada, especialmente si la consulta es compleja.
+La optimización de consultas es el proceso de selección del plan de evaluación de las consultas más eficiente de entre las muchas estrategias disponibles para el procesamiento de una consulta dada, especialmente si la consulta es compleja.
 Un aspecto de la optimización de las consultas tiene lugar en el nivel del álgebra relacional, donde el sistema intenta hallar expresiones equivalentes a la expresión dada, pero cuya ejecución sea más eficiente. Otro aspecto es la elección de la estrategia para el procesamiento de la consulta, como puede ser la selección del algoritmo que se usará para ejecutar una operación, la selección de los índices concretos a emplear, entre otras.
 >[!tldr] Importancia en la Elección de los Planes de Evaluación
 > La diferencia en coste entre una estrategia buena y una mala suele ser sustancial, y puede resultar de varios órdenes de magnitud. Por tanto, merece la pena que el sistema invierta una cantidad importante de tiempo en la selección de una buena estrategia para el procesamiento de la consulta.
@@ -58,13 +58,9 @@ Cada una de las operaciones relacionales se pueden implementar en varios algorit
 Una manera de escoger un plan de evaluación para una expresión de consulta es sencillamente escoger el algoritmo más económico para evaluar cada operación. Sin embargo, puede que el algoritmo más económico no siempre sea la forma más óptima de resolver una expresión, debido a que otros algoritmos pueden proporcionarnos ciertas ventajas en ciertas ocasiones, por lo que al momento de seleccionar un plan de evaluación no solo se debe considerar la expresión de menor costo sino también los algoritmos de resolución de cada operación relacional.
 Hay dos enfoques generales a la hora de seleccionar el algoritmo de evaluación adecuado. El primero busca todos los planes y escoge el mejor basándose en los costes, mientras que el segundo usa la heurística para escoger el plan. Cabe aclarar que los optimizadores de consultas reales incorporan elementos de ambos enfoques.
 - **Operación basada en costes**. Los optimizadores generan una gama de planes de evaluación a partir de la consulta dada empleando reglas de equivalencia, para posteriormente escogen el de coste mínimo. Para las consultas complejas el número de planes de consulta diferentes que son equivalentes a un plan dado puede ser grande. Para evitar esto se puede desarrollar un algoritmo de ***programación dinámica*** para hallar los órdenes de las operaciones, almacena los resultados obtenidos y vuelve a utilizarlos en próximas consultas, reduciendo enormemente el tiempo de ejecución[^3].
-
->[!tldr] Orden de Reunión de las Relaciones
->El orden en que las reunión de un conjunto de relaciones genera las tuplas también es importante para hallar el mejor orden global de reunión, ya que puede afectar al coste de las reuniones posteriores. Se dice que un ***orden determinado*** de las tuplas es un orden interesante si puede resultar útil para alguna operación posterior.
-
 - **Heurística de optimización**. Un inconveniente de la optimización basada en costes es el coste de la propia optimización, dicho coste puede reducirse mediante algoritmos inteligentes, pero aun así el número de planes de evaluación distintos para una consulta puede ser muy grande y buscar el plan óptimo sigue siendo costoso. Por ello, muchos sistemas usan reglas heurísticas para reducir el coste de la optimización. Un ejemplo de regla heurística puede ser resolver las operaciones de selección tan pronto como sea posible. Los optimizadores heurísticos usan esta regla sin averiguar si se reduce el coste mediante esta transformación, por lo general la aplicación de estas reglas suele aportar una reducción al coste, aunque no siempre.
 
->[!info] Heurística para la Proyección
+>[!info] Heurística para la Proyección y la Selección
 >Las operaciones de proyección y selección, reduce el tamaño de las relaciones, por lo tanto, siempre que haya que generar una relación temporal, resulta ventajoso aplicar inmediatamente cuantas proyecciones sea posible. Aunque suele resultar mejor llevar a cabo las selecciones antes que las proyecciones, ya que las selecciones tienen la posibilidad de reducir mucho el tamaño de las relaciones y permiten el empleo de índices para tener acceso a las tuplas.
 ## Evaluación de Expresiones y Encauzamiento
 La manera más simple de evaluar una expresión es realizar las distintas operaciones de consulta una tras otro en el orden establecido por el plan de evaluación. El resultado de cada evaluación se materializa en una relación temporal que será utilizada posteriormente, este proceso recibe el nombre de ***evaluación materializada***. Este método requiere la construcción de relaciones temporales, y por ende la escritura de estas mismas en disco, lo que no es muy eficiente.
