--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -1,4 +1,4 @@
-Una transacción es una unidad de programa que accede y posiblemente actualiza varios elementos de información, dicha transacción puede contener única sentencia SQL o varias de estas. Las transacciones deben poseer las siguientes propiedades:
+Una transacción es una unidad de programa que accede y posiblemente actualiza varios elementos de información, dicha transacción puede contener una única sentencia SQL o varias de estas. Las transacciones deben poseer las siguientes propiedades:
 - **Atomicidad**: Los cambios provocados por una transacción o se completan todos (commit), o se deshacen todos (rollback).
 - **Consistencia**: Las bases de datos asegura que cualquier transacción llevará a la base de datos de un estado válido a otro estado válido, manteniendo siempre las reglas de integridad definidas.
 - **Aislamiento**: Los resultados de una transacción son invisibles para el resto de transacciones de otros procesos hasta que la transacción sea completada.
@@ -31,7 +31,7 @@ Por otro lado, existen diferentes tipos de fallos que pueden ocurrir durante el 
 - **Errores lógicos**: La transacción no puede continuar con su ejecución normal debido a alguna condición interna.
 - **Errores del sistema**: El sistema ha entrado en un estado, en el cual, la transacción no puede continuar con su ejecución normal.
 - **Caída del sistema**: El hardware funciona mal, causando la pérdida del contenido del almacenamiento volátil.
-- **Fallo de disco**: Un bloque de disco pierde su contenido debido a la rotura de la cabeza o fallos durante la transmisión de información.
+- **Fallo de disco**: Un bloque de disco pierde su contenido debido a la rotura de la cabecera o fallos durante la transmisión de información.
 ### Implementación de Transacciones Mediante Bitácoras
 Los fallos producidos al momento de realizar transacciones pueden ser recuperados utilizando bitácoras, también conocidos como ***Log Files***, estas bitácoras describen de forma única la estructura de la base de datos, cada uno de los registros que componen las bitácoras consta de los siguientes campos:
 - **Nombre de la transacción**: El nombre único de la transacción que ejecutó la operación de escritura.
