--- a/4º Año/Bases de Datos/Unidad 11/2. Patrones de Diseño en MongoDB.md
+++ b/4º Año/Bases de Datos/Unidad 11/2. Patrones de Diseño en MongoDB.md
@@ -4,9 +4,9 @@ En cuanto a la capacidad de consulta, MongoDB permiten realizar búsquedas con c
 Los patrones de uso en MongoDB dependen del tipo de aplicación y la forma en que se accede a los datos. Es fundamental considerar el rendimiento, la escalabilidad y la simplicidad al implementarlos.
 1. **Approximation (Aproximación)**: Este patrón es útil cuando se realizan cálculos costosos de manera frecuente y la precisión no es crítica.
 	- **Ventajas**: Con este patrón se minimizan las escrituras en la base de datos y se asegura el mantenimiento de números estadísticamente válidos.
-	- **Desventajas**: los valores calculados no son exactos y la implementación recae en la aplicación, es decir, es la aplicación la que controla las actualizaciones.
+	- **Desventajas**: Los valores calculados no son exactos y la implementación recae en la aplicación, es decir, es la aplicación la que controla las actualizaciones.
 2. **Polymorphic (Polimórfico)**: Ideal para situaciones en la cual hay documentos con más similitudes que diferencias y se necesita que los datos se mantengan en una sola colección.
-	- **Ventajas**: Este patrón es fácil de implementar y permite que las consultas se ejecuten sobre una sola relación.
+	- **Ventajas**: Este patrón es fácil de implementar y permite que las consultas se ejecuten sobre una sola colección.
 3. **Attribute (Atributo)**: Resulta útil cuando se trabaja con documentos grandes con muchos campos similares, pero existe un subconjunto de datos que comparten una característica en común y se desea ordenarlos o consulta ese subconjunto de datos.
 	- **Ventajas**: Con la aplicación de este patrón se minimiza la cantidad índices necesarios a la hora de realizar una consulta, además las consultas son más sencillas y rápidas.
 4. **Bucket**: Excelente para aquellas situaciones en las que se necesita gestionar transmisiones de datos, series temporales o aplicaciones de IoT.
