--- a/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
+++ b/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
@@ -1,5 +1,4 @@
 ## Consultas por Multiples Claves de Búsqueda
-
 Hasta ahora se ha asumido implícitamente que se utiliza solamente un índice o tabla de asociación para procesar una consulta en una relación. Sin embargo, para ciertos tipos de consultas es ventajoso el uso de múltiples claves. Como ejemplo consideremos la siguiente consulta:
 ```sql
 SELECT numero_cuenta 
@@ -10,12 +9,12 @@ SELECT numero_cuenta
 Hay tres estrategias posibles para procesar esta consulta:
 1. Usar el índice en *nombre_sucursal* para encontrar todos los registros pertenecientes a la sucursal de Pamplona. Luego se examinan estos registros para ver si `saldo = 1000`.
 2. Usar el índice en *saldo* para encontrar todos los registros pertenecientes a cuentas con saldos de 1000 y luego examinar estos registros para ver si `nombre_sucursal = Pamplona`.
-3. Usar el índice en *nombre_sucursal* para encontrar punteros a registros pertenecientes a la sucursal Pamplona y usar el índice en *saldo* para encontrar los punteros a todos los registros pertenecientes a cuentas con saldos de 1.000. Se realiza la intersección de estos dos conjuntos de punteros.
+3. Usar el índice en *nombre_sucursal* para encontrar punteros a registros pertenecientes a la sucursal Pamplona y usar el índice en *saldo* para encontrar los punteros a todos los registros pertenecientes a cuentas con saldos de 1000. Se realiza la intersección de estos dos conjuntos de punteros.
 
 La tercera estrategia es la única de las tres que aprovecha la ventaja de tener varios índices. Aunque incluso esta estrategia podría ser una pobre elección si se cumple al menos una de las siguientes condiciones:
-- Hay muchos registros pertenecientes a la sucursal Pamplona
-- Hay muchos registros pertenecientes a cuentas con un saldo de 1.000
-- Hay pocos registros pertenecientes a la sucursal Pamplona cuyo saldo de cuenta sea 1.000.
+- Hay muchos registros pertenecientes a la sucursal Pamplona.
+- Hay muchos registros pertenecientes a cuentas con un saldo de 1000.
+- Hay pocos registros pertenecientes a la sucursal Pamplona cuyo saldo de cuenta sea 1000.
 
 Si estas condiciones ocurrieran, se tendrían que examinar un gran número de punteros para producir un resultado pequeño. Una estrategia más eficiente para este caso es crear y utilizar un índice con una clave de búsqueda compuesta por *nombre_sucursal* y *saldo*. La estructura del índice es la misma que para cualquier otro índice, con la única diferencia de que la clave de búsqueda no es un simple atributo, sino una lista de atributos, esta clave se puede representar como una tupla de valores, de la forma $(a_1, \dots, a_n)$, donde los atributos indexados son $A_1, \dots, A_n$.
 >[!tldr] Orden de las Claves Múltiples
@@ -32,7 +31,7 @@ En los cuales las escalas lineales se deben escoger de tal manera que los regist
 Si bien los archivos en retícula proporcionan un descenso significativo en el tiempo de procesamiento de consultas multiclave, implican un gasto adicional de espacio, así como una degradación del rendimiento al insertar y borrar registros, además de ser difícil elegir una división en los rangos de las claves para que la distribución de las claves sea uniforme.
 ### Mapas de Bits
 Los índices de ***mapas de bits*** son un tipo de índices especializado para consultas sencillas sobre varias claves, aunque cada índice de mapas de bits se construya para una única clave. Para usarlos, los registros de la relación deben estar numerados secuencialmente, de este modo dado un número $n$ es fácil recuperar el registro con número $n$. Esto es particularmente fácil de conseguir si los registros tienen un tamaño fijo y están asignados en bloques consecutivos de un archivo.
-El número de registro se puede traducir fácilmente en un número de bloques y en un número que identifica el registro dentro del bloque. En este contexto un mapa de bits no es más que un arreglo de bits. En su forma más simple, un índice de mapas de bits sobre un atributo $A$ de la relación $r$ consiste en un mapa de bits para cada valor que pueda tomar $A$. Cada mapa de bits tiene tantos bits como número de registros tenga la relación. El í-ésimo bit del mapa de bits para el valor $v_j$ se establece en 1 si el registro con número $i$ tiene el valor $v_j$ para el atributo $A$, el resto de bits del mapa de bits se establecen a 0.
+El número de registro se puede traducir fácilmente en un número de bloques y en un número que identifica el registro dentro del bloque. En este contexto un mapa de bits no es más que un arreglo de bits. En su forma más simple, un índice de mapas de bits sobre un atributo $A$ de la relación $r$ consiste en un mapa de bits para cada valor que pueda tomar $A$. Cada mapa de bits tiene tantos bits como número de registros tenga la relación. El i-ésimo bit del mapa de bits para el valor $v_j$ se establece en 1 si el registro con número $i$ tiene el valor $v_j$ para el atributo $A$, el resto de bits del mapa de bits se establecen a 0.
 Considérese una relación $r$ con un atributo $A$ que solo puede tomar un número pequeño de valores. Por ejemplo, la relación *info_cliente* la cual puede tener un campo sexo, que puede tomar solo los valores ***M*** o ***F***, para este caso se podría tener un mapa de bits para el valor M y otro para F. El i-ésimo bit del mapa de bits para M se establece en 1 si el valor sexo del registro con número $i$ es M, mientras que el resto de bits del mapa de bits se establecen en 0.
 Los mapas de bits también pueden utilizarse para contar el número de tuplas que satisfacen una selección dada esto resulta importante para el análisis de datos. De este modo la forma de saber la cantidad de tuplas que satisfacen ciertas condiciones es tan simple como hacer la intersección entre ambos mapas de bits, así se puede obtener el resultado del mapa de bits sin acceder a la relación.
 >[!note] Implementación Eficiente de las Operaciones de Mapas de Bits
